--- a/bootstrap_themes/static/bootstrap/themes/cerulean/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/cerulean/less/bootswatch.less
@@ -1,131 +1,1 @@
-// Cerulean 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-.btn-shadow(@color) {
-  #gradient > .vertical-three-colors(lighten(@color, 8%), @color, 60%, darken(@color, 4%));
-  filter: none;
-  border-bottom: 1px solid darken(@color, 10%);
-}
-
-// Navbar =====================================================================
-
-.navbar {
-  .btn-shadow(@navbar-default-bg);
-  filter: none;
-  .box-shadow(0 1px 10px rgba(0, 0, 0, 0.1));
-
-  &-default {
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-default-bg;
-    }
-  }
-
-  &-inverse {
-    #gradient > .vertical-three-colors(lighten(@navbar-inverse-bg, 8%), lighten(@navbar-inverse-bg, 4%), 60%, darken(@navbar-inverse-bg, 2%));
-    filter: none;
-    border-bottom: 1px solid darken(@navbar-inverse-bg, 10%);
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-inverse-bg;
-    }
-  }
-
-  .navbar-nav > li > a,
-  &-brand {
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  }
-}
-
-@media (max-width: @grid-float-breakpoint-max) {
-
-  .navbar {
-
-    .dropdown-header {
-      color: #fff;
-    }
-
-    .dropdown-menu {
-      a {
-        color: #fff;
-      }
-    }
-  }
-}
-
-// Buttons ====================================================================
-
-.btn {
-
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-
-  .caret {
-    border-top-color: #fff;
-  }
-}
-
-.btn-default {
-  
-  .btn-shadow(@btn-default-bg);
-
-  &:hover {
-    color: @btn-default-color;
-  }
-
-  .caret {
-    border-top-color: @text-color;
-  }
-}
-
-.btn-default {
-  .btn-shadow(@btn-default-bg);
-}
-
-.btn-primary {
-  .btn-shadow(@btn-primary-bg);
-}
-
-.btn-success {
-  .btn-shadow(@btn-success-bg);
-}
-
-.btn-info {
-  .btn-shadow(@btn-info-bg);
-}
-
-.btn-warning {
-  .btn-shadow(@btn-warning-bg);
-}
-
-.btn-danger {
-  .btn-shadow(@btn-danger-bg);
-}
-
-// Typography =================================================================
-
-// Tables =====================================================================
-
-// Forms ======================================================================
-
-// Navs =======================================================================
-
-// Indicators =================================================================
-
-// Progress bars ==============================================================
-
-// Containers =================================================================
-
-.panel-primary,
-.panel-success,
-.panel-warning,
-.panel-danger,
-.panel-info {
-
-  .panel-heading,
-  .panel-title {
-    color: #fff;
-  }
-}
+b'// Cerulean 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n.btn-shadow(@color) {\n  #gradient > .vertical-three-colors(lighten(@color, 8%), @color, 60%, darken(@color, 4%));\n  filter: none;\n  border-bottom: 1px solid darken(@color, 10%);\n}\n\n// Navbar =====================================================================\n\n.navbar {\n  &-default {\n    .btn-shadow(@navbar-default-bg);\n    filter: none;\n    .box-shadow(0 1px 10px rgba(0, 0, 0, 0.1));\n\n    .badge {\n      background-color: #fff;\n      color: @navbar-default-bg;\n    }\n  }\n\n  &-inverse {\n    #gradient > .vertical-three-colors(lighten(@navbar-inverse-bg, 8%), lighten(@navbar-inverse-bg, 4%), 60%, darken(@navbar-inverse-bg, 2%));\n    filter: none;\n    border-bottom: 1px solid darken(@navbar-inverse-bg, 10%);\n\n    .badge {\n      background-color: #fff;\n      color: @navbar-inverse-bg;\n    }\n  }\n\n  .navbar-nav > li > a,\n  &-brand {\n    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);\n  }\n}\n\n@media (max-width: @grid-float-breakpoint-max) {\n\n  .navbar {\n\n    .dropdown-header {\n      color: #fff;\n    }\n\n    .dropdown-menu {\n      a {\n        color: #fff;\n      }\n    }\n  }\n}\n\n// Buttons ====================================================================\n\n.btn {\n\n  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);\n\n  .caret {\n    border-top-color: #fff;\n  }\n}\n\n.btn-default {\n  \n  .btn-shadow(@btn-default-bg);\n\n  &:hover {\n    color: @btn-default-color;\n  }\n\n  .caret {\n    border-top-color: @text-color;\n  }\n}\n\n.btn-default {\n  .btn-shadow(@btn-default-bg);\n}\n\n.btn-primary {\n  .btn-shadow(@btn-primary-bg);\n}\n\n.btn-success {\n  .btn-shadow(@btn-success-bg);\n}\n\n.btn-info {\n  .btn-shadow(@btn-info-bg);\n}\n\n.btn-warning {\n  .btn-shadow(@btn-warning-bg);\n}\n\n.btn-danger {\n  .btn-shadow(@btn-danger-bg);\n}\n\n// Typography =================================================================\n\n// Tables =====================================================================\n\n// Forms ======================================================================\n\n// Navs =======================================================================\n\n// Indicators =================================================================\n\n// Progress bars ==============================================================\n\n// Containers =================================================================\n\n.panel-primary,\n.panel-success,\n.panel-warning,\n.panel-danger,\n.panel-info {\n\n  .panel-heading,\n  .panel-title {\n    color: #fff;\n  }\n}\n'
