--- a/bootstrap_themes/static/bootstrap/themes/readable/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/readable/less/bootswatch.less
@@ -1,187 +1,1 @@
-// Readable 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Raleway:400,700";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-// Navbar =====================================================================
-
-.navbar {
-  font-family: @headings-font-family;
-
-  &-nav,
-  &-form {
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  &-nav > li > a {
-    @margin-vertical: ((@navbar-height - 2*@padding-base-vertical - @line-height-computed - 2px) / 2);
-    margin: @margin-vertical 6px;
-    padding: @padding-base-vertical @padding-base-horizontal;
-    border: 1px solid transparent;
-    border-radius: @border-radius-base;
-
-    &:hover {
-      border: 1px solid #ddd;
-    }
-  }
-
-  &-nav > .active > a,
-  &-nav > .active > a:hover {
-    border: 1px solid #ddd;
-  }
-
-  &-default .navbar-nav > .active > a:hover {
-    color: @navbar-default-link-hover-color;
-  }
-
-  &-inverse .navbar-nav > .active > a:hover {
-    color: @navbar-inverse-link-hover-color;
-  }
-
-  &-brand {
-    padding-top: ((@navbar-height - 2*@font-size-large) / 2);
-    padding-bottom: ((@navbar-height - 2*@font-size-large) / 2);
-    line-height: 1.9;
-  }
-}
-
-@media (min-width: @grid-float-breakpoint) {
-  .navbar {
-    .navbar-nav > li > a {
-      padding: @padding-base-vertical @padding-base-horizontal;
-    }
-  }
-}
-
-@media (max-width: (@grid-float-breakpoint - 1)) {
-  .navbar {
-    .navbar-nav > li > a {
-      margin: 0;
-    }
-  }
-}
-
-// Buttons ====================================================================
-
-.btn {
-  font-family: @headings-font-family;
-}
-
-// Typography =================================================================
-
-// Tables =====================================================================
-
-// Forms ======================================================================
-
-legend {
-  font-family: @headings-font-family;
-}
-
-.input-group-addon {
-  font-family: @font-family-sans-serif;
-}
-
-// Navs =======================================================================
-
-.nav {
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border: 1px solid #ddd;
-  }
-}
-
-.pagination {
-
-  font-family: @headings-font-family;
-
-  &-lg > li > a,
-  &-lg > li > span {
-    padding: 14px 24px;
-  }
-}
-
-.pager {
-
-  font-family: @headings-font-family;
-
-  a {
-    color: @text-color;
-  }
-
-  a:hover {
-    border-color: transparent;
-    color: #fff;
-  }
-
-  .disabled a {
-    border-color: @pager-border;
-  }
-}
-
-// Indicators =================================================================
-
-.close {
-  color: #fff;
-  text-decoration: none;
-  text-shadow: none;
-  opacity: 0.4;
-
-  &:hover,
-  &:focus {
-    color: #fff;
-    opacity: 1;
-  }
-}
-
-.alert {
-  .alert-link {
-    color: @alert-success-text;
-    text-decoration: underline;
-  }
-}
-
-.label {
-  font-family: @headings-font-family;
-  font-weight: normal;
-
-  &-default {
-    border: 1px solid #ddd;
-    color: @text-color;
-  }
-
-}
-
-.badge {
-  padding: 1px 7px 5px;
-  vertical-align: 2px;
-  font-family: @headings-font-family;
-  font-weight: normal;
-}
-
-// Progress bars ==============================================================
-
-// Containers =================================================================
-
-.panel {
-  .box-shadow(none);
-
-  &-default {
-    .close {
-      color: @text-color;
-    }
-  }
-}
-
-.modal {
-  .close {
-    color: @text-color;
-  }
-}
+b'// Readable 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Raleway:400,700";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n// Navbar =====================================================================\n\n.navbar {\n  font-family: @headings-font-family;\n\n  &-nav,\n  &-form {\n    margin-left: 0;\n    margin-right: 0;\n  }\n\n  &-nav > li > a {\n    @margin-vertical: ((@navbar-height - 2*@padding-base-vertical - @line-height-computed - 2px) / 2);\n    margin: @margin-vertical 6px;\n    padding: @padding-base-vertical @padding-base-horizontal;\n    border: 1px solid transparent;\n    border-radius: @border-radius-base;\n\n    &:hover {\n      border: 1px solid #ddd;\n    }\n  }\n\n  &-nav > .active > a,\n  &-nav > .active > a:hover {\n    border: 1px solid #ddd;\n  }\n\n  &-default .navbar-nav > .active > a:hover {\n    color: @navbar-default-link-hover-color;\n  }\n\n  &-inverse .navbar-nav > .active > a:hover {\n    color: @navbar-inverse-link-hover-color;\n  }\n\n  &-brand {\n    padding-top: ((@navbar-height - 2*@font-size-large) / 2);\n    padding-bottom: ((@navbar-height - 2*@font-size-large) / 2);\n    line-height: 1.9;\n  }\n}\n\n@media (min-width: @grid-float-breakpoint) {\n  .navbar {\n    .navbar-nav > li > a {\n      padding: @padding-base-vertical @padding-base-horizontal;\n    }\n  }\n}\n\n@media (max-width: (@grid-float-breakpoint - 1)) {\n  .navbar {\n    .navbar-nav > li > a {\n      margin: 0;\n    }\n  }\n}\n\n// Buttons ====================================================================\n\n.btn {\n  font-family: @headings-font-family;\n}\n\n// Typography =================================================================\n\n// Tables =====================================================================\n\n// Forms ======================================================================\n\nlegend {\n  font-family: @headings-font-family;\n}\n\n.input-group-addon {\n  font-family: @font-family-sans-serif;\n}\n\n// Navs =======================================================================\n\n.nav {\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    border: 1px solid #ddd;\n  }\n}\n\n.pagination {\n\n  font-family: @headings-font-family;\n\n  &-lg > li > a,\n  &-lg > li > span {\n    padding: 14px 24px;\n  }\n}\n\n.pager {\n\n  font-family: @headings-font-family;\n\n  a {\n    color: @text-color;\n  }\n\n  a:hover {\n    border-color: transparent;\n    color: #fff;\n  }\n\n  .disabled a {\n    border-color: @pager-border;\n  }\n}\n\n// Indicators =================================================================\n\n.close {\n  color: #fff;\n  text-decoration: none;\n  text-shadow: none;\n  opacity: 0.4;\n\n  &:hover,\n  &:focus {\n    color: #fff;\n    opacity: 1;\n  }\n}\n\n.alert {\n  .alert-link {\n    color: @alert-success-text;\n    text-decoration: underline;\n  }\n}\n\n.label {\n  font-family: @headings-font-family;\n  font-weight: normal;\n\n  &-default {\n    border: 1px solid #ddd;\n    color: @text-color;\n  }\n\n}\n\n.badge {\n  padding: 1px 7px 5px;\n  vertical-align: 2px;\n  font-family: @headings-font-family;\n  font-weight: normal;\n}\n\n// Progress bars ==============================================================\n\n// Containers =================================================================\n\n.panel {\n  .box-shadow(none);\n\n  &-default {\n    .close {\n      color: @text-color;\n    }\n  }\n}\n\n.modal {\n  .close {\n    color: @text-color;\n  }\n}\n'
