--- a/bootstrap_themes/static/bootstrap/themes/sandstone/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/sandstone/less/bootswatch.less
@@ -1,199 +1,1 @@
-// Sandstone 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Roboto:400,500";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-// Navbar =====================================================================
-
-.sandstone {
-  font-size: 11px;
-  line-height: 22px;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-.navbar {
-  .nav > li > a {
-    .sandstone;
-  }
-
-  &-form input,
-  &-form .form-control {
-    border: none;
-  }
-}
-
-// Buttons ====================================================================
-
-.btn {
-  border: none;
-  .sandstone;
-
-  &:hover {
-    border-color: transparent;
-  }
-
-  &-lg {
-    line-height: 26px;
-  }
-
-  &-default {
-    &:hover {
-      background-color: @navbar-default-link-active-bg;
-    }
-  }
-}
-
-// Typography =================================================================
-
-// Tables =====================================================================
-
-// Forms ======================================================================
-
-input,
-.form-control {
-  .box-shadow(none);
-
-  &:focus {
-    border-color: @input-border;
-    .box-shadow(none);
-  }
-}
-
-// Navs =======================================================================
-
-.nav {
-  .sandstone;
-
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: @gray-light;
-  }
-}
-
-.nav-tabs {
-
-  & > li > a {
-    background-color: @gray-lighter;
-    border-color: @nav-tabs-border-color;
-    color: @gray;
-  }
-
-  > li.disabled > a:hover {
-    background-color: @gray-lighter;
-  }
-}
-
-.nav-pills {
-  a {
-    color: @gray;
-  }
-
-  li > a {
-    border: 1px solid transparent;
-  }
-
-  li.active > a,
-  li > a:hover {
-    border-color: @gray-light;
-  }
-
-  li.disabled > a {
-    border-color: transparent;
-  }
-}
-
-.breadcrumb {
-  .sandstone;
-
-  border: 1px solid @gray-light;
-
-  a {
-    color: @gray;
-  }
-}
-
-.pagination {
-  .sandstone;
-}
-
-.pager {
-  .sandstone;
-
-  li > a {
-    color: @gray;
-  }
-}
-
-.dropdown-menu {
-  & > li > a {
-    .sandstone;
-  }
-}
-
-// Indicators =================================================================
-
-.alert {
-
-  a,
-  .alert-link {
-    color: #fff;
-  }
-}
-
-.tooltip {
-  .sandstone;
-}
-
-// Progress bars ==============================================================
-
-.progress {
-  border-radius: 10px;
-  background-color: @gray-light;
-  .box-shadow(none);
-
-  &-bar {
-    .box-shadow(none);
-  }
-}
-
-// Containers =================================================================
-
-.list-group {
-  &-item {
-    padding: 16px 24px;
-  }
-}
-
-.well {
-  .box-shadow(none);
-}
-
-.panel {
-  .box-shadow(none);
-
-  .panel-heading,
-  .panel-title {
-    .sandstone;
-    color: #fff;
-  }
-
-  .panel-footer {
-    .sandstone;
-  }
-
-  &-default {
-    .panel-heading,
-    .panel-title,
-    .panel-footer {
-      color: @gray;
-    }
-  }
-}
+b'// Sandstone 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Roboto:400,500,700";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n// Navbar =====================================================================\n\n.sandstone {\n  font-size: 11px;\n  line-height: 22px;\n  font-weight: 500;\n  text-transform: uppercase;\n}\n\n.navbar {\n  .nav > li > a {\n    .sandstone;\n  }\n\n  &-form input,\n  &-form .form-control {\n    border: none;\n  }\n}\n\n// Buttons ====================================================================\n\n.btn {\n  border: none;\n  .sandstone;\n\n  &:hover {\n    border-color: transparent;\n  }\n\n  &-lg {\n    line-height: 26px;\n  }\n\n  &-default {\n    &:hover {\n      background-color: @navbar-default-link-active-bg;\n    }\n  }\n}\n\n// Typography =================================================================\n\n// Tables =====================================================================\n\n// Forms ======================================================================\n\ninput,\n.form-control {\n  .box-shadow(none);\n\n  &:focus {\n    border-color: @input-border;\n    .box-shadow(none);\n  }\n}\n\n// Navs =======================================================================\n\n.nav {\n  .sandstone;\n\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    border-color: @gray-light;\n  }\n}\n\n.nav-tabs {\n\n  & > li > a {\n    background-color: @gray-lighter;\n    border-color: @nav-tabs-border-color;\n    color: @gray;\n  }\n\n  > li.disabled > a:hover {\n    background-color: @gray-lighter;\n  }\n}\n\n.nav-pills {\n  a {\n    color: @gray;\n  }\n\n  li > a {\n    border: 1px solid transparent;\n  }\n\n  li.active > a,\n  li > a:hover {\n    border-color: @gray-light;\n  }\n\n  li.disabled > a {\n    border-color: transparent;\n  }\n}\n\n.breadcrumb {\n  .sandstone;\n\n  border: 1px solid @gray-light;\n\n  a {\n    color: @gray;\n  }\n}\n\n.pagination {\n  .sandstone;\n}\n\n.pager {\n  .sandstone;\n\n  li > a {\n    color: @gray;\n  }\n}\n\n.dropdown-menu {\n  & > li > a {\n    .sandstone;\n  }\n}\n\n// Indicators =================================================================\n\n.alert {\n\n  a,\n  .alert-link {\n    color: #fff;\n  }\n}\n\n.tooltip {\n  .sandstone;\n}\n\n// Progress bars ==============================================================\n\n.progress {\n  border-radius: 10px;\n  background-color: @gray-light;\n  .box-shadow(none);\n\n  &-bar {\n    .box-shadow(none);\n  }\n}\n\n// Containers =================================================================\n\n.list-group {\n  &-item {\n    padding: 16px 24px;\n  }\n}\n\n.well {\n  .box-shadow(none);\n}\n\n.panel {\n  .box-shadow(none);\n\n  .panel-heading,\n  .panel-title {\n    .sandstone;\n    color: #fff;\n  }\n\n  .panel-footer {\n    .sandstone;\n  }\n\n  &-default {\n    .panel-heading,\n    .panel-title,\n    .panel-footer {\n      color: @gray;\n    }\n  }\n}\n'
