--- a/bootstrap_themes/static/bootstrap/themes/simplex/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/simplex/less/bootswatch.less
@@ -1,174 +1,1 @@
-// Simplex 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:400,700";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-.btn-shadow(@color) {
-  #gradient > .vertical-three-colors(lighten(@color, 3%), @color, 6%, darken(@color, 3%));
-  filter: none;
-  border: 1px solid darken(@color, 10%);
-}
-
-// Navbar =====================================================================
-
-.navbar {
-
-  &-inverse {
-
-    .badge {
-      background-color: #fff;
-      color: @brand-primary;
-    }
-  }
-}
-
-// Buttons ====================================================================
-
-.btn {
-  font-family: @headings-font-family;
-}
-
-.btn-default,
-.btn-default:hover {
-  .btn-shadow(@btn-default-bg);
-}
-
-.btn-primary,
-.btn-primary:hover {
-  .btn-shadow(@btn-primary-bg);
-}
-
-.btn-success,
-.btn-success:hover {
-  .btn-shadow(@btn-success-bg);
-}
-
-.btn-info,
-.btn-info:hover {
-  .btn-shadow(@btn-info-bg);
-}
-
-.btn-warning,
-.btn-warning:hover {
-  .btn-shadow(@btn-warning-bg);
-}
-
-.btn-danger,
-.btn-danger:hover {
-  .btn-shadow(@btn-danger-bg);
-}
-
-// Typography =================================================================
-
-body {
-  font-weight: 200;
-}
-
-// Tables =====================================================================
-
-th {
-  color: @headings-color;
-}
-
-// Forms ======================================================================
-
-legend {
-  color: @headings-color;
-}
-
-label {
-  font-weight: normal;
-}
-
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-danger;
-  }
-}
-
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-primary;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-primary;
-  }
-}
-
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-success;
-  }
-}
-
-// Navs =======================================================================
-
-.pager {
-  a {
-    color: @headings-color;
-  }
-
-  a:hover,
-  .active > a, {
-    border-color: @brand-primary;
-    color: #fff;
-  }
-
-  .disabled > a {
-    border-color: @pager-border;
-  }
-}
-
-// Indicators =================================================================
-
-// Progress bars ==============================================================
-
-// Containers =================================================================
+b'// Simplex 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:400,700";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n.btn-shadow(@color) {\n  #gradient > .vertical-three-colors(lighten(@color, 3%), @color, 6%, darken(@color, 3%));\n  filter: none;\n  border: 1px solid darken(@color, 10%);\n}\n\n// Navbar =====================================================================\n\n.navbar {\n\n  &-inverse {\n\n    .badge {\n      background-color: #fff;\n      color: @brand-primary;\n    }\n  }\n}\n\n// Buttons ====================================================================\n\n.btn {\n  font-family: @headings-font-family;\n}\n\n.btn-default,\n.btn-default:hover {\n  .btn-shadow(@btn-default-bg);\n}\n\n.btn-primary,\n.btn-primary:hover {\n  .btn-shadow(@btn-primary-bg);\n}\n\n.btn-success,\n.btn-success:hover {\n  .btn-shadow(@btn-success-bg);\n}\n\n.btn-info,\n.btn-info:hover {\n  .btn-shadow(@btn-info-bg);\n}\n\n.btn-warning,\n.btn-warning:hover {\n  .btn-shadow(@btn-warning-bg);\n}\n\n.btn-danger,\n.btn-danger:hover {\n  .btn-shadow(@btn-danger-bg);\n}\n\n// Typography =================================================================\n\nbody {\n  font-weight: 200;\n}\n\n// Tables =====================================================================\n\nth {\n  color: @headings-color;\n}\n\n// Forms ======================================================================\n\nlegend {\n  color: @headings-color;\n}\n\nlabel {\n  font-weight: normal;\n}\n\n.has-warning {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-danger;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-danger;\n  }\n}\n\n.has-error {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-primary;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-primary;\n  }\n}\n\n.has-success {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-success;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-success;\n  }\n}\n\n// Navs =======================================================================\n\n.pager {\n  a {\n    color: @headings-color;\n  }\n\n  a:hover,\n  .active > a, {\n    border-color: @brand-primary;\n    color: #fff;\n  }\n\n  .disabled > a {\n    border-color: @pager-border;\n  }\n}\n\n// Indicators =================================================================\n\n// Progress bars ==============================================================\n\n// Containers ================================================================='
