--- a/bootstrap_themes/static/bootstrap/themes/spacelab/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/spacelab/less/bootswatch.less
@@ -1,146 +1,1 @@
-// Spacelab 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-.btn-shadow(@color) {
-  #gradient > .vertical-three-colors(lighten(@color, 15%), @color, 50%, darken(@color, 4%));
-  filter: none;
-  border: 1px solid darken(@color, 10%);
-}
-
-// Navbar =====================================================================
-
-.navbar {
-
-  .btn-shadow(@navbar-default-bg);
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
-
-  &-inverse {
-    .btn-shadow(@navbar-inverse-bg);
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-inverse-bg;
-    }
-  }
-
-  .badge {
-    text-shadow: none;
-  }
-
-  &-nav > li > a,
-  &-nav > li > a:hover {
-    padding-top: (@navbar-padding-vertical + 2px);
-    padding-bottom: (@navbar-padding-vertical - 2px);
-    .transition(color ease-in-out .2s);
-  }
-  
-  &-brand,
-  &-brand:hover {
-    .transition(color ease-in-out .2s);
-  }
-
-  .caret,
-  .caret:hover {
-    .transition(border-color ease-in-out .2s);
-  }
-
-  .dropdown-menu {
-    text-shadow: none;
-  }
-}
-
-// Buttons ====================================================================
-
-.btn {
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
-
-  &-default {
-    .btn-shadow(@btn-default-bg);
-
-    &:hover {
-      .btn-shadow(darken(@btn-default-bg, 4%));
-    }
-  }
-
-  &-primary {
-    .btn-shadow(@btn-primary-bg);
-
-    &:hover {
-      .btn-shadow(darken(@btn-primary-bg, 4%));
-    }
-  }
-
-  &-success {
-    .btn-shadow(@btn-success-bg);
-
-    &:hover {
-      .btn-shadow(darken(@btn-success-bg, 4%));
-    }
-  }
-
-  &-info {
-    .btn-shadow(@btn-info-bg);
-
-    &:hover {
-      .btn-shadow(darken(@btn-info-bg, 4%));
-    }
-  }
-
-  &-warning {
-    .btn-shadow(@btn-warning-bg);
-
-    &:hover {
-      .btn-shadow(darken(@btn-warning-bg, 4%));
-    }
-  }
-
-  &-danger {
-    .btn-shadow(@btn-danger-bg);
-
-    &:hover {
-      .btn-shadow(darken(@btn-danger-bg, 4%));
-    }
-  }
-
-  &-link {
-    text-shadow: none;
-  }
-
-  &:active,
-  &.active {
-    background-image: none;
-    .box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
-  }
-}
-
-// Typography =================================================================
-
-// Tables =====================================================================
-
-// Forms ======================================================================
-
-// Navs =======================================================================
-
-// Indicators =================================================================
-
-// Progress bars ==============================================================
-
-// Containers =================================================================
-
-.panel {
-
-  &-primary {
-    .panel-title {
-      color: #fff;
-    }
-  }
-}
+b'// Spacelab 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n.btn-shadow(@color) {\n  #gradient > .vertical-three-colors(lighten(@color, 15%), @color, 50%, darken(@color, 4%));\n  filter: none;\n  border: 1px solid darken(@color, 10%);\n}\n\n// Navbar =====================================================================\n\n.navbar {\n\n  .btn-shadow(@navbar-default-bg);\n  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);\n\n  &-inverse {\n    .btn-shadow(@navbar-inverse-bg);\n    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);\n\n    .badge {\n      background-color: #fff;\n      color: @navbar-inverse-bg;\n    }\n  }\n\n  .badge {\n    text-shadow: none;\n  }\n\n  &-nav > li > a,\n  &-nav > li > a:hover {\n    padding-top: (@navbar-padding-vertical + 2px);\n    padding-bottom: (@navbar-padding-vertical - 2px);\n    .transition(color ease-in-out .2s);\n  }\n  \n  &-brand,\n  &-brand:hover {\n    .transition(color ease-in-out .2s);\n  }\n\n  .caret,\n  .caret:hover {\n    .transition(border-color ease-in-out .2s);\n  }\n\n  .dropdown-menu {\n    text-shadow: none;\n  }\n}\n\n// Buttons ====================================================================\n\n.btn {\n  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);\n\n  &-default {\n    .btn-shadow(@btn-default-bg);\n\n    &:hover {\n      .btn-shadow(darken(@btn-default-bg, 4%));\n    }\n  }\n\n  &-primary {\n    .btn-shadow(@btn-primary-bg);\n\n    &:hover {\n      .btn-shadow(darken(@btn-primary-bg, 4%));\n    }\n  }\n\n  &-success {\n    .btn-shadow(@btn-success-bg);\n\n    &:hover {\n      .btn-shadow(darken(@btn-success-bg, 4%));\n    }\n  }\n\n  &-info {\n    .btn-shadow(@btn-info-bg);\n\n    &:hover {\n      .btn-shadow(darken(@btn-info-bg, 4%));\n    }\n  }\n\n  &-warning {\n    .btn-shadow(@btn-warning-bg);\n\n    &:hover {\n      .btn-shadow(darken(@btn-warning-bg, 4%));\n    }\n  }\n\n  &-danger {\n    .btn-shadow(@btn-danger-bg);\n\n    &:hover {\n      .btn-shadow(darken(@btn-danger-bg, 4%));\n    }\n  }\n\n  &-link {\n    text-shadow: none;\n  }\n\n  &:active,\n  &.active {\n    background-image: none;\n    .box-shadow(inset 0 3px 5px rgba(0,0,0,.125));\n  }\n}\n\n// Typography =================================================================\n\n// Tables =====================================================================\n\n// Forms ======================================================================\n\n// Navs =======================================================================\n\n// Indicators =================================================================\n\n// Progress bars ==============================================================\n\n// Containers =================================================================\n\n.panel {\n\n  &-primary {\n    .panel-title {\n      color: #fff;\n    }\n  }\n}'
