--- a/bootstrap_themes/static/bootstrap/themes/cosmo/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/cosmo/less/bootswatch.less
@@ -1,266 +1,1 @@
-// Cosmo 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-// Navbar =====================================================================
-
-.navbar {
-
-  &-inverse {
-
-    .badge {
-      background-color: #fff;
-      color: @brand-primary;
-    }
-  }
-}
-
-// Buttons ====================================================================
-
-// Typography =================================================================
-
-body {
-  -webkit-font-smoothing: antialiased;
-}
-
-.text-primary,
-.text-primary:hover {
-  color: @brand-primary;
-}
-
-.text-success,
-.text-success:hover {
-  color: @brand-success;
-}
-
-.text-danger,
-.text-danger:hover {
-  color: @brand-danger;
-}
-
-.text-warning,
-.text-warning:hover {
-  color: @brand-warning;
-}
-
-.text-info,
-.text-info:hover {
-  color: @brand-info;
-}
-
-// Tables =====================================================================
-
-table,
-.table {
-
-  a:not(.btn) {
-    text-decoration: underline;
-  }
-
-  .dropdown-menu a {
-    text-decoration: none;
-  }
-
-  .success,
-  .warning,
-  .danger,
-  .info {
-    color: #fff;
-
-    a {
-      color: #fff;
-    }
-  }
-}
-
-// Forms ======================================================================
-
-
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-warning;
-  }
-
-  .form-control,
-  .form-control:focus,
-  .input-group-addon {
-    border: 1px solid @brand-warning;
-  }
-}
-
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus,
-  .input-group-addon {
-    border: 1px solid @brand-danger;
-  }
-}
-
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus,
-  .input-group-addon {
-    border: 1px solid @brand-success;
-  }
-}
-
-// Navs =======================================================================
-
-.nav-pills {
-
-  & > li > a {
-    border-radius: 0;
-  }
-}
-
-.dropdown-menu {
-
-  & > li > a:hover,
-  & > li > a:focus {
-    background-image: none;
-  }
-}
-
-// Indicators =================================================================
-
-.close {
-  text-decoration: none;
-  text-shadow: none;
-  opacity: 0.4;
-
-  &:hover,
-  &:focus {
-    opacity: 1;
-  }
-}
-
-.alert {
-  border: none;
-
-  .alert-link {
-    text-decoration: underline;
-    color: #fff;
-  }
-}
-
-.label {
-  border-radius: 0;
-}
-
-// Progress bars ==============================================================
-
-.progress {
-  height: 8px;
-  .box-shadow(none);
-  .progress-bar {
-    font-size: 8px;
-    line-height: 8px;
-  }
-}
-
-// Containers =================================================================
-
-.panel {
-  &-heading,
-  &-footer {
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
-  }
-
-  &-default {
-    .close {
-      color: @text-color;
-    }
-  }
-}
-
-a.list-group-item {
-
-  &-success {
-    &.active {
-      background-color: @state-success-bg;
-    }
-
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-success-bg, 5%);
-    }
-  }
-
-  &-warning {
-    &.active {
-      background-color: @state-warning-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-warning-bg, 5%);
-    }
-  }
-
-  &-danger {
-    &.active {
-      background-color: @state-danger-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-danger-bg, 5%);
-    }
-  }
-}
-
-.modal {
-  .close {
-    color: @text-color;
-  }
-}
-
-.popover {
-  color: @text-color;
-}
+b'// Cosmo 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n// Navbar =====================================================================\n\n.navbar {\n\n  &-inverse {\n\n    .badge {\n      background-color: #fff;\n      color: @brand-primary;\n    }\n  }\n}\n\n// Buttons ====================================================================\n\n// Typography =================================================================\n\nbody {\n  -webkit-font-smoothing: antialiased;\n}\n\n.text-primary,\n.text-primary:hover {\n  color: @brand-primary;\n}\n\n.text-success,\n.text-success:hover {\n  color: @brand-success;\n}\n\n.text-danger,\n.text-danger:hover {\n  color: @brand-danger;\n}\n\n.text-warning,\n.text-warning:hover {\n  color: @brand-warning;\n}\n\n.text-info,\n.text-info:hover {\n  color: @brand-info;\n}\n\n// Tables =====================================================================\n\ntable,\n.table {\n\n  a:not(.btn) {\n    text-decoration: underline;\n  }\n\n  .dropdown-menu a {\n    text-decoration: none;\n  }\n\n  .success,\n  .warning,\n  .danger,\n  .info {\n    color: #fff;\n\n    a {\n      color: #fff;\n    }\n  }\n}\n\n// Forms ======================================================================\n\n\n.has-warning {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-warning;\n  }\n\n  .form-control,\n  .form-control:focus,\n  .input-group-addon {\n    border: 1px solid @brand-warning;\n  }\n}\n\n.has-error {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-danger;\n  }\n\n  .form-control,\n  .form-control:focus,\n  .input-group-addon {\n    border: 1px solid @brand-danger;\n  }\n}\n\n.has-success {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-success;\n  }\n\n  .form-control,\n  .form-control:focus,\n  .input-group-addon {\n    border: 1px solid @brand-success;\n  }\n}\n\n// Navs =======================================================================\n\n.nav-pills {\n\n  & > li > a {\n    border-radius: 0;\n  }\n}\n\n.dropdown-menu {\n\n  & > li > a:hover,\n  & > li > a:focus {\n    background-image: none;\n  }\n}\n\n// Indicators =================================================================\n\n.close {\n  text-decoration: none;\n  text-shadow: none;\n  opacity: 0.4;\n\n  &:hover,\n  &:focus {\n    opacity: 1;\n  }\n}\n\n.alert {\n  border: none;\n\n  .alert-link {\n    text-decoration: underline;\n    color: #fff;\n  }\n}\n\n.label {\n  border-radius: 0;\n}\n\n// Progress bars ==============================================================\n\n.progress {\n  height: 8px;\n  .box-shadow(none);\n  .progress-bar {\n    font-size: 8px;\n    line-height: 8px;\n  }\n}\n\n// Containers =================================================================\n\n.panel {\n  &-heading,\n  &-footer {\n    border-top-right-radius: 0;\n    border-top-left-radius: 0;\n  }\n\n  &-default {\n    .close {\n      color: @text-color;\n    }\n  }\n}\n\na.list-group-item {\n\n  &-success {\n    &.active {\n      background-color: @state-success-bg;\n    }\n\n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-success-bg, 5%);\n    }\n  }\n\n  &-warning {\n    &.active {\n      background-color: @state-warning-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-warning-bg, 5%);\n    }\n  }\n\n  &-danger {\n    &.active {\n      background-color: @state-danger-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-danger-bg, 5%);\n    }\n  }\n}\n\n.modal {\n  .close {\n    color: @text-color;\n  }\n}\n\n.popover {\n  color: @text-color;\n}\n'
