--- a/bootstrap_themes/static/bootstrap/themes/flatly/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/flatly/less/bootswatch.less
@@ -1,334 +1,1 @@
-// Flatly 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Lato:400,700,400italic";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-// Navbar =====================================================================
-
-.navbar {
-  border-width: 0;
-
-  &-default {
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-default-bg;
-    }
-  }
-
-  &-inverse {
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-inverse-bg;
-    }
-  }
-
-  &-brand {
-    line-height: 1;
-  }
-}
-
-// Buttons ====================================================================
-
-.btn {
-  border-width: 2px;
-}
-
-.btn:active {
-  .box-shadow(none);
-}
-
-.btn-group.open .dropdown-toggle {
-  .box-shadow(none);
-}
-
-// Typography =================================================================
-
-.text-primary,
-.text-primary:hover {
-  color: @brand-primary;
-}
-
-.text-success,
-.text-success:hover {
-  color: @brand-success;
-}
-
-.text-danger,
-.text-danger:hover {
-  color: @brand-danger;
-}
-
-.text-warning,
-.text-warning:hover {
-  color: @brand-warning;
-}
-
-.text-info,
-.text-info:hover {
-  color: @brand-info;
-}
-
-// Tables =====================================================================
-
-table,
-.table {
-
-  a:not(.btn) {
-    text-decoration: underline;
-  }
-
-  .dropdown-menu a {
-    text-decoration: none;
-  }
-
-  .success,
-  .warning,
-  .danger,
-  .info {
-    color: #fff;
-
-    > th > a,
-    > td > a,
-    > a {
-      color: #fff;
-    }
-  }
-
-  > thead > tr > th,
-  > tbody > tr > th,
-  > tfoot > tr > th,
-  > thead > tr > td,
-  > tbody > tr > td,
-  > tfoot > tr > td {
-    border: none;
-  }
-
-  &-bordered > thead > tr > th,
-  &-bordered > tbody > tr > th,
-  &-bordered > tfoot > tr > th,
-  &-bordered > thead > tr > td,
-  &-bordered > tbody > tr > td,
-  &-bordered > tfoot > tr > td {
-    border: 1px solid @table-border-color;
-  }
-}
-
-// Forms ======================================================================
-
-.form-control,
-input {
-  border-width: 2px;
-  .box-shadow(none);
-
-  &:focus {
-    .box-shadow(none);
-  }
-}
-
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-warning;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 2px solid @brand-warning;
-  }
-
-  .input-group-addon {
-    border-color: @brand-warning;
-  }
-}
-
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 2px solid @brand-danger;
-  }
-
-  .input-group-addon {
-    border-color: @brand-danger;
-  }
-}
-
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 2px solid @brand-success;
-  }
-
-  .input-group-addon {
-    border-color: @brand-success;
-  }
-}
-
-// Navs =======================================================================
-
-.nav {
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: transparent;
-  }
-}
-
-.pager {
-  a,
-  a:hover {
-    color: #fff;
-  }
-
-  .disabled {
-    &>a,
-    &>a:hover,
-    &>a:focus,
-    &>span {
-      background-color: @pagination-disabled-bg;
-    }
-  }
-}
-
-// Indicators =================================================================
-
-.close {
-  color: #fff;
-  text-decoration: none;
-  opacity: 0.4;
-
-  &:hover,
-  &:focus {
-    color: #fff;
-    opacity: 1;
-  }
-}
-
-.alert {
-
-  .alert-link {
-    color: #fff;
-    text-decoration: underline;
-  }
-}
-
-// Progress bars ==============================================================
-
-.progress {
-  height: 10px;
-  .box-shadow(none);
-  .progress-bar {
-    font-size: 10px;
-    line-height: 10px;
-  }
-}
-
-// Containers =================================================================
-
-.well {
-  .box-shadow(none);
-}
-
-a.list-group-item {
-
-  &.active,
-  &.active:hover,
-  &.active:focus {
-    border-color: @list-group-border;
-  }
-
-  &-success {
-    &.active {
-      background-color: @state-success-bg;
-    }
-
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-success-bg, 5%);
-    }
-  }
-
-  &-warning {
-    &.active {
-      background-color: @state-warning-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-warning-bg, 5%);
-    }
-  }
-
-  &-danger {
-    &.active {
-      background-color: @state-danger-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-danger-bg, 5%);
-    }
-  }
-}
-
-.panel {
-  &-default {
-    .close {
-      color: @text-color;
-    }
-  }
-}
-
-.modal {
-  .close {
-    color: @text-color;
-  }
-}
-
-.popover {
-  color: @text-color;
-}
+b'// Flatly 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Lato:400,700,400italic";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n// Navbar =====================================================================\n\n.navbar {\n  border-width: 0;\n\n  &-default {\n\n    .badge {\n      background-color: #fff;\n      color: @navbar-default-bg;\n    }\n  }\n\n  &-inverse {\n\n    .badge {\n      background-color: #fff;\n      color: @navbar-inverse-bg;\n    }\n  }\n\n  &-brand {\n    line-height: 1;\n  }\n}\n\n// Buttons ====================================================================\n\n.btn {\n  border-width: 2px;\n}\n\n.btn:active {\n  .box-shadow(none);\n}\n\n.btn-group.open .dropdown-toggle {\n  .box-shadow(none);\n}\n\n// Typography =================================================================\n\n.text-primary,\n.text-primary:hover {\n  color: @brand-primary;\n}\n\n.text-success,\n.text-success:hover {\n  color: @brand-success;\n}\n\n.text-danger,\n.text-danger:hover {\n  color: @brand-danger;\n}\n\n.text-warning,\n.text-warning:hover {\n  color: @brand-warning;\n}\n\n.text-info,\n.text-info:hover {\n  color: @brand-info;\n}\n\n// Tables =====================================================================\n\ntable,\n.table {\n\n  a:not(.btn) {\n    text-decoration: underline;\n  }\n\n  .dropdown-menu a {\n    text-decoration: none;\n  }\n\n  .success,\n  .warning,\n  .danger,\n  .info {\n    color: #fff;\n\n    > th > a,\n    > td > a,\n    > a {\n      color: #fff;\n    }\n  }\n\n  > thead > tr > th,\n  > tbody > tr > th,\n  > tfoot > tr > th,\n  > thead > tr > td,\n  > tbody > tr > td,\n  > tfoot > tr > td {\n    border: none;\n  }\n\n  &-bordered > thead > tr > th,\n  &-bordered > tbody > tr > th,\n  &-bordered > tfoot > tr > th,\n  &-bordered > thead > tr > td,\n  &-bordered > tbody > tr > td,\n  &-bordered > tfoot > tr > td {\n    border: 1px solid @table-border-color;\n  }\n}\n\n// Forms ======================================================================\n\n.form-control,\ninput {\n  border-width: 2px;\n  .box-shadow(none);\n\n  &:focus {\n    .box-shadow(none);\n  }\n}\n\n.has-warning {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-warning;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 2px solid @brand-warning;\n  }\n\n  .input-group-addon {\n    border-color: @brand-warning;\n  }\n}\n\n.has-error {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-danger;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 2px solid @brand-danger;\n  }\n\n  .input-group-addon {\n    border-color: @brand-danger;\n  }\n}\n\n.has-success {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-success;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 2px solid @brand-success;\n  }\n\n  .input-group-addon {\n    border-color: @brand-success;\n  }\n}\n\n// Navs =======================================================================\n\n.nav {\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    border-color: transparent;\n  }\n}\n\n.pager {\n  a,\n  a:hover {\n    color: #fff;\n  }\n\n  .disabled {\n    &>a,\n    &>a:hover,\n    &>a:focus,\n    &>span {\n      background-color: @pagination-disabled-bg;\n    }\n  }\n}\n\n// Indicators =================================================================\n\n.close {\n  color: #fff;\n  text-decoration: none;\n  opacity: 0.4;\n\n  &:hover,\n  &:focus {\n    color: #fff;\n    opacity: 1;\n  }\n}\n\n.alert {\n\n  .alert-link {\n    color: #fff;\n    text-decoration: underline;\n  }\n}\n\n// Progress bars ==============================================================\n\n.progress {\n  height: 10px;\n  .box-shadow(none);\n  .progress-bar {\n    font-size: 10px;\n    line-height: 10px;\n  }\n}\n\n// Containers =================================================================\n\n.well {\n  .box-shadow(none);\n}\n\na.list-group-item {\n\n  &.active,\n  &.active:hover,\n  &.active:focus {\n    border-color: @list-group-border;\n  }\n\n  &-success {\n    &.active {\n      background-color: @state-success-bg;\n    }\n\n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-success-bg, 5%);\n    }\n  }\n\n  &-warning {\n    &.active {\n      background-color: @state-warning-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-warning-bg, 5%);\n    }\n  }\n\n  &-danger {\n    &.active {\n      background-color: @state-danger-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-danger-bg, 5%);\n    }\n  }\n}\n\n.panel {\n  &-default {\n    .close {\n      color: @text-color;\n    }\n  }\n}\n\n.modal {\n  .close {\n    color: @text-color;\n  }\n}\n\n.popover {\n  color: @text-color;\n}\n'
