--- a/bootstrap_themes/static/bootstrap/themes/journal/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/journal/less/bootswatch.less
@@ -1,149 +1,1 @@
-// Journal 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=News+Cycle:400,700";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-// Navbar =====================================================================
-
-.navbar {
-  font-size: 18px;
-  font-family: @font-family-sans-serif;
-  font-weight: @headings-font-weight;
-
-  &-default {
-
-    .badge {
-      background-color: #000;
-      color: #fff;
-    }
-  }
-
-  &-inverse {
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-inverse-bg;
-    }
-  }
-}
-
-.navbar-brand {
-  font-size: inherit;
-  font-weight: @headings-font-weight;
-  text-transform: uppercase;
-}
-
-// Buttons ====================================================================
-
-// Typography =================================================================
-
-// Tables =====================================================================
-
-// Forms ======================================================================
-
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-danger;
-  }
-}
-
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-primary;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-primary;
-  }
-}
-
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-success;
-  }
-}
-
-// Navs =======================================================================
-
-// Indicators =================================================================
-
-.badge {
-  padding-bottom: 4px;
-  vertical-align: 3px;
-  font-size: 10px;
-}
-
-// Progress bars ==============================================================
-
-// Containers =================================================================
-
-.jumbotron {
-
-  h1, h2, h3, h4, h5, h6 {
-    font-family: @font-family-sans-serif;
-    font-weight: @headings-font-weight;
-    color: #000;
-  }
-}
-
-.panel {
-
-  &-primary,
-  &-success,
-  &-warning,
-  &-danger,
-  &-info {
-    .panel-title {
-      color: #fff;
-    }
-  }
-
-
-}
+b'// Journal 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=News+Cycle:400,700";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n// Navbar =====================================================================\n\n.navbar {\n  font-size: 18px;\n  font-family: @font-family-sans-serif;\n  font-weight: @headings-font-weight;\n\n  &-default {\n\n    .badge {\n      background-color: #000;\n      color: #fff;\n    }\n  }\n\n  &-inverse {\n\n    .badge {\n      background-color: #fff;\n      color: @navbar-inverse-bg;\n    }\n  }\n}\n\n.navbar-brand {\n  font-size: inherit;\n  font-weight: @headings-font-weight;\n  text-transform: uppercase;\n}\n\n// Buttons ====================================================================\n\n// Typography =================================================================\n\n// Tables =====================================================================\n\n// Forms ======================================================================\n\n.has-warning {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-danger;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-danger;\n  }\n}\n\n.has-error {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-primary;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-primary;\n  }\n}\n\n.has-success {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-success;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-success;\n  }\n}\n\n// Navs =======================================================================\n\n// Indicators =================================================================\n\n.badge {\n  padding-bottom: 4px;\n  vertical-align: 3px;\n  font-size: 10px;\n}\n\n// Progress bars ==============================================================\n\n// Containers =================================================================\n\n.jumbotron {\n\n  h1, h2, h3, h4, h5, h6 {\n    font-family: @font-family-sans-serif;\n    font-weight: @headings-font-weight;\n    color: #000;\n  }\n}\n\n.panel {\n\n  &-primary,\n  &-success,\n  &-warning,\n  &-danger,\n  &-info {\n    .panel-title {\n      color: #fff;\n    }\n  }\n\n\n}\n'
