--- a/bootstrap_themes/static/bootstrap/themes/lumen/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/lumen/less/bootswatch.less
@@ -1,527 +1,1 @@
-// Lumen 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-.shadow (@width: 4px) {
-  border-width: 0 1px @width 1px;
-}
-
-// Navbar =====================================================================
-
-.navbar  {
-  .shadow();
-}
-
-// Buttons ====================================================================
-
-.btn {
-  padding: (@padding-base-vertical + 2) @padding-base-horizontal @padding-base-vertical;
-  .shadow();
-  font-size: 12px;
-  font-weight: bold;
-  text-transform: uppercase;
-
-  &:hover {
-    margin-top: 1px;
-    border-bottom-width: 3px;
-  }
-
-  &:active {
-    margin-top: 2px;
-    border-bottom-width: 2px;
-    .box-shadow(none);
-  }
-
-  &-lg,
-  &-group-lg > .btn {
-    padding: (@padding-large-vertical + 2) @padding-large-horizontal @padding-large-vertical;
-    line-height: 15px;
-  }
-
-  &-sm,
-  &-group-sm > .btn {
-    padding: (@padding-small-vertical + 2) @padding-small-horizontal @padding-small-vertical;
-  }
-
-  &-xs,
-  &-group-xs > .btn {
-    padding: (@padding-xs-vertical + 2) @padding-xs-horizontal @padding-xs-vertical;
-  }
-
-  &-default:hover,
-  &-default:focus,
-  &-group.open .dropdown-toggle.btn-default {
-    background-color: @btn-default-bg;
-    border-color: @btn-default-border;
-  }
-
-  &-primary:hover,
-  &-primary:focus,
-  &-group.open .dropdown-toggle.btn-primary {
-    background-color: @btn-primary-bg;
-    border-color: @btn-primary-border;
-  }
-
-  &-success:hover,
-  &-success:focus,
-  &-group.open .dropdown-toggle.btn-success {
-    background-color: @btn-success-bg;
-    border-color: @btn-success-border;
-  }
-
-  &-info:hover,
-  &-info:focus,
-  &-group.open .dropdown-toggle.btn-info {
-    background-color: @btn-info-bg;
-    border-color: @btn-info-border;
-  }
-
-  &-warning:hover,
-  &-warning:focus,
-  &-group.open .dropdown-toggle.btn-warning {
-    background-color: @btn-warning-bg;
-    border-color: @btn-warning-border;
-  }
-
-  &-danger:hover,
-  &-danger:focus,
-  &-group.open .dropdown-toggle.btn-danger {
-    background-color: @btn-danger-bg;
-    border-color: @btn-danger-border;
-  }
-
-  &-group.open .dropdown-toggle {
-    .box-shadow(none);
-  }
-}
-
-.navbar-btn {
-  &:hover {
-    margin-top: 8px
-  }
-
-  &:active {
-    margin-top: 9px
-  }
-
-  &.btn-sm {
-    &:hover {
-      margin-top: 11px
-    }
-
-    &:active {
-      margin-top: 12px
-    }
-  }
-
-  &.btn-xs {
-    &:hover {
-      margin-top: 15px
-    }
-
-    &:active {
-      margin-top: 16px
-    }
-  }
-}
-
-.btn-group-vertical {
-  .btn + .btn {
-    &:hover {
-      border-top-width: 1px;
-    }
-
-    &:active {
-      border-top-width: 2px;
-    }
-  }
-}
-
-// Typography =================================================================
-
-.text-primary,
-.text-primary:hover {
-  color: @brand-primary;
-}
-
-.text-success,
-.text-success:hover {
-  color: @brand-success;
-}
-
-.text-danger,
-.text-danger:hover {
-  color: @brand-danger;
-}
-
-.text-warning,
-.text-warning:hover {
-  color: @brand-warning;
-}
-
-.text-info,
-.text-info:hover {
-  color: @brand-info;
-}
-
-// Tables =====================================================================
-
-table,
-.table {
-
-  a:not(.btn) {
-    text-decoration: underline;
-  }
-
-  .dropdown-menu a {
-    text-decoration: none;
-  }
-
-  .success,
-  .warning,
-  .danger,
-  .info {
-    color: #fff;
-
-    a:not(.btn) {
-      color: #fff;
-    }
-  }
-
-  &:not(.table-bordered) {
-    > thead > tr > th,
-    > tbody > tr > th,
-    > tfoot > tr > th,
-    > thead > tr > td,
-    > tbody > tr > td,
-    > tfoot > tr > td {
-      border-color: transparent;
-    }
-  }
-}
-
-// Forms ======================================================================
-
-.form-control {
-  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));
-}
-
-label {
-  font-weight: normal;
-}
-
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-warning;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 1px solid @brand-warning;
-    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));
-  }
-
-  .input-group-addon {
-    border: 1px solid @brand-warning;
-  }
-}
-
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 1px solid @brand-danger;
-    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));
-  }
-
-  .input-group-addon {
-    border: 1px solid @brand-danger;
-  }
-}
-
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 1px solid @brand-success;
-    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));
-  }
-
-  .input-group-addon {
-    border: 1px solid @brand-success;
-  }
-}
-
-// Navs =======================================================================
-
-.nav {
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: transparent;
-  }
-}
-
-.nav-tabs {
-
-  > li > a {
-    margin-top: 6px;
-    border-color: @navbar-default-border;
-    color: @gray-dark;
-    .transition(all 0.2s ease-in-out);
-  }
-
-  > li > a:hover,
-  > li > a:focus,
-  > li.active > a,
-  > li.active > a:hover,
-  > li.active > a:focus,
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    padding-bottom: (@padding-large-vertical + 3);
-    margin-top: 0;
-  }
-
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: @navbar-default-border;
-  }
-
-  > li.disabled > a:hover,
-  > li.disabled > a:focus {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    margin-top: 6px;
-  }
-
-  &.nav-justified > li {
-    vertical-align: bottom;
-  }
-}
-
-.dropdown-menu {
-  margin-top: 0;
-  .shadow();
-  border-top-width: 1px;
-  .box-shadow(none);
-}
-
-.breadcrumb {
-  border-color: darken(@breadcrumb-bg, 5%);
-  border-style: solid;
-  .shadow();
-}
-
-.pagination,
-.pager {
-
-  > li > a,
-  > li > span {
-    position: relative;
-    top: 0;
-    .shadow();
-    color: @pagination-color;
-    font-size: 12px;
-    font-weight: bold;
-    text-transform: uppercase;
-
-    &:hover {
-      top: 1px;
-      border-bottom-width: 3px;
-    }
-
-    &:active {
-      top: 2px;
-      border-bottom-width: 2px;
-    }
-  }
-
-  > .disabled > a,
-  > .disabled > span {
-
-    &:hover {
-      top: 0;
-      .shadow();
-    }
-
-    &:active {
-      top: 0;
-      .shadow();
-    }
-  }
-}
-
-.pager {
-
-  > li > a,
-  > li > span,
-  > .disabled > a,
-  > .disabled > span {
-
-    &,
-    &:hover,
-    &:active {
-      border-left-width: 2px;
-      border-right-width: 2px;
-    }
-  }
-}
-
-// Indicators =================================================================
-
-.close {
-  color: #fff;
-  text-decoration: none;
-  opacity: 0.4;
-
-  &:hover,
-  &:focus {
-    color: #fff;
-    opacity: 1;
-  }
-}
-
-.alert {
-  .shadow();
-
-  .alert-link {
-    font-weight: normal;
-    color: #fff;
-    text-decoration: underline;
-  }
-}
-
-.label {
-  font-weight: normal;
-}
-
-// Progress bars ==============================================================
-
-.progress {
-  border: 1px solid @navbar-default-border;
-  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.1));
-
-  &-bar {
-    .box-shadow(inset 0 -4px 0 rgba(0, 0, 0, 0.15));
-  }
-}
-
-// Containers =================================================================
-
-.well {
-  border: 1px solid @navbar-default-border;
-  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.05));
-}
-
-a.list-group-item {
-
-  &.active,
-  &.active:hover,
-  &.active:focus {
-    border-color: @list-group-border;
-  }
-
-  &-success {
-    &.active {
-      background-color: @state-success-bg;
-    }
-
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-success-bg, 5%);
-    }
-  }
-
-  &-warning {
-    &.active {
-      background-color: @state-warning-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-warning-bg, 5%);
-    }
-  }
-
-  &-danger {
-    &.active {
-      background-color: @state-danger-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-danger-bg, 5%);
-    }
-  }
-}
-
-.jumbotron {
-  border: 1px solid @navbar-default-border;
-  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.05));
-}
-
-.panel {
-  border: 1px solid @navbar-default-border;
-  .shadow();
-
-  &-default {
-    .close {
-      color: @text-color;
-    }
-  }
-}
-
-.modal {
-  .close {
-    color: @text-color;
-  }
-}
-
-.popover {
-  color: @text-color;
-}
+b'// Lumen 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n.shadow (@width: 4px) {\n  border-width: 0 1px @width 1px;\n}\n\n// Navbar =====================================================================\n\n.navbar  {\n  .shadow();\n}\n\n// Buttons ====================================================================\n\n.btn {\n  padding: (@padding-base-vertical + 2) @padding-base-horizontal @padding-base-vertical;\n  .shadow();\n  font-size: 12px;\n  font-weight: bold;\n  text-transform: uppercase;\n\n  &:hover {\n    margin-top: 1px;\n    border-bottom-width: 3px;\n  }\n\n  &:active {\n    margin-top: 2px;\n    border-bottom-width: 2px;\n    .box-shadow(none);\n  }\n\n  &-lg,\n  &-group-lg > .btn {\n    padding: (@padding-large-vertical + 2) @padding-large-horizontal @padding-large-vertical;\n    line-height: 15px;\n  }\n\n  &-sm,\n  &-group-sm > .btn {\n    padding: (@padding-small-vertical + 2) @padding-small-horizontal @padding-small-vertical;\n  }\n\n  &-xs,\n  &-group-xs > .btn {\n    padding: (@padding-xs-vertical + 2) @padding-xs-horizontal @padding-xs-vertical;\n  }\n\n  &-default:hover,\n  &-default:focus,\n  &-group.open .dropdown-toggle.btn-default {\n    background-color: @btn-default-bg;\n    border-color: @btn-default-border;\n  }\n\n  &-primary:hover,\n  &-primary:focus,\n  &-group.open .dropdown-toggle.btn-primary {\n    background-color: @btn-primary-bg;\n    border-color: @btn-primary-border;\n  }\n\n  &-success:hover,\n  &-success:focus,\n  &-group.open .dropdown-toggle.btn-success {\n    background-color: @btn-success-bg;\n    border-color: @btn-success-border;\n  }\n\n  &-info:hover,\n  &-info:focus,\n  &-group.open .dropdown-toggle.btn-info {\n    background-color: @btn-info-bg;\n    border-color: @btn-info-border;\n  }\n\n  &-warning:hover,\n  &-warning:focus,\n  &-group.open .dropdown-toggle.btn-warning {\n    background-color: @btn-warning-bg;\n    border-color: @btn-warning-border;\n  }\n\n  &-danger:hover,\n  &-danger:focus,\n  &-group.open .dropdown-toggle.btn-danger {\n    background-color: @btn-danger-bg;\n    border-color: @btn-danger-border;\n  }\n\n  &-group.open .dropdown-toggle {\n    .box-shadow(none);\n  }\n}\n\n.navbar-btn {\n  &:hover {\n    margin-top: 8px\n  }\n\n  &:active {\n    margin-top: 9px\n  }\n\n  &.btn-sm {\n    &:hover {\n      margin-top: 11px\n    }\n\n    &:active {\n      margin-top: 12px\n    }\n  }\n\n  &.btn-xs {\n    &:hover {\n      margin-top: 15px\n    }\n\n    &:active {\n      margin-top: 16px\n    }\n  }\n}\n\n.btn-group-vertical {\n  .btn + .btn {\n    &:hover {\n      border-top-width: 1px;\n    }\n\n    &:active {\n      border-top-width: 2px;\n    }\n  }\n}\n\n// Typography =================================================================\n\n.text-primary,\n.text-primary:hover {\n  color: @brand-primary;\n}\n\n.text-success,\n.text-success:hover {\n  color: @brand-success;\n}\n\n.text-danger,\n.text-danger:hover {\n  color: @brand-danger;\n}\n\n.text-warning,\n.text-warning:hover {\n  color: @brand-warning;\n}\n\n.text-info,\n.text-info:hover {\n  color: @brand-info;\n}\n\n// Tables =====================================================================\n\ntable,\n.table {\n\n  a:not(.btn) {\n    text-decoration: underline;\n  }\n\n  .dropdown-menu a {\n    text-decoration: none;\n  }\n\n  .success,\n  .warning,\n  .danger,\n  .info {\n    color: #fff;\n\n    a:not(.btn) {\n      color: #fff;\n    }\n  }\n\n  &:not(.table-bordered) {\n    > thead > tr > th,\n    > tbody > tr > th,\n    > tfoot > tr > th,\n    > thead > tr > td,\n    > tbody > tr > td,\n    > tfoot > tr > td {\n      border-color: transparent;\n    }\n  }\n}\n\n// Forms ======================================================================\n\n.form-control {\n  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));\n}\n\nlabel {\n  font-weight: normal;\n}\n\n.has-warning {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-warning;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 1px solid @brand-warning;\n    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));\n  }\n\n  .input-group-addon {\n    border: 1px solid @brand-warning;\n  }\n}\n\n.has-error {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-danger;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 1px solid @brand-danger;\n    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));\n  }\n\n  .input-group-addon {\n    border: 1px solid @brand-danger;\n  }\n}\n\n.has-success {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-success;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 1px solid @brand-success;\n    .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.075));\n  }\n\n  .input-group-addon {\n    border: 1px solid @brand-success;\n  }\n}\n\n// Navs =======================================================================\n\n.nav {\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    border-color: transparent;\n  }\n}\n\n.nav-tabs {\n\n  > li > a {\n    margin-top: 6px;\n    border-color: @navbar-default-border;\n    color: @gray-dark;\n    .transition(all 0.2s ease-in-out);\n  }\n\n  > li > a:hover,\n  > li > a:focus,\n  > li.active > a,\n  > li.active > a:hover,\n  > li.active > a:focus,\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    padding-bottom: (@padding-large-vertical + 3);\n    margin-top: 0;\n  }\n\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    border-color: @navbar-default-border;\n  }\n\n  > li.disabled > a:hover,\n  > li.disabled > a:focus {\n    padding-top: 10px;\n    padding-bottom: 10px;\n    margin-top: 6px;\n  }\n\n  &.nav-justified > li {\n    vertical-align: bottom;\n  }\n}\n\n.dropdown-menu {\n  margin-top: 0;\n  .shadow();\n  border-top-width: 1px;\n  .box-shadow(none);\n}\n\n.breadcrumb {\n  border-color: darken(@breadcrumb-bg, 5%);\n  border-style: solid;\n  .shadow();\n}\n\n.pagination,\n.pager {\n\n  > li > a,\n  > li > span {\n    position: relative;\n    top: 0;\n    .shadow();\n    color: @pagination-color;\n    font-size: 12px;\n    font-weight: bold;\n    text-transform: uppercase;\n\n    &:hover {\n      top: 1px;\n      border-bottom-width: 3px;\n    }\n\n    &:active {\n      top: 2px;\n      border-bottom-width: 2px;\n    }\n  }\n\n  > .disabled > a,\n  > .disabled > span {\n\n    &:hover {\n      top: 0;\n      .shadow();\n    }\n\n    &:active {\n      top: 0;\n      .shadow();\n    }\n  }\n}\n\n.pager {\n\n  > li > a,\n  > li > span,\n  > .disabled > a,\n  > .disabled > span {\n\n    &,\n    &:hover,\n    &:active {\n      border-left-width: 2px;\n      border-right-width: 2px;\n    }\n  }\n}\n\n// Indicators =================================================================\n\n.close {\n  color: #fff;\n  text-decoration: none;\n  opacity: 0.4;\n\n  &:hover,\n  &:focus {\n    color: #fff;\n    opacity: 1;\n  }\n}\n\n.alert {\n  .shadow();\n\n  .alert-link {\n    font-weight: normal;\n    color: #fff;\n    text-decoration: underline;\n  }\n}\n\n.label {\n  font-weight: normal;\n}\n\n// Progress bars ==============================================================\n\n.progress {\n  border: 1px solid @navbar-default-border;\n  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.1));\n\n  &-bar {\n    .box-shadow(inset 0 -4px 0 rgba(0, 0, 0, 0.15));\n  }\n}\n\n// Containers =================================================================\n\n.well {\n  border: 1px solid @navbar-default-border;\n  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.05));\n}\n\na.list-group-item {\n\n  &.active,\n  &.active:hover,\n  &.active:focus {\n    border-color: @list-group-border;\n  }\n\n  &-success {\n    &.active {\n      background-color: @state-success-bg;\n    }\n\n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-success-bg, 5%);\n    }\n  }\n\n  &-warning {\n    &.active {\n      background-color: @state-warning-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-warning-bg, 5%);\n    }\n  }\n\n  &-danger {\n    &.active {\n      background-color: @state-danger-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-danger-bg, 5%);\n    }\n  }\n}\n\n.jumbotron {\n  border: 1px solid @navbar-default-border;\n  .box-shadow(inset 0 2px 0 rgba(0, 0, 0, 0.05));\n}\n\n.panel {\n  border: 1px solid @navbar-default-border;\n  .shadow();\n\n  &-default {\n    .close {\n      color: @text-color;\n    }\n  }\n}\n\n.modal {\n  .close {\n    color: @text-color;\n  }\n}\n\n.popover {\n  color: @text-color;\n}\n'
