--- a/bootstrap_themes/static/bootstrap/themes/slate/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/slate/less/bootswatch.less
@@ -1,448 +1,1 @@
-// Slate 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-.btn-shadow(@color) {
-  #gradient > .vertical-three-colors(lighten(@color, 6%), @color, 60%, darken(@color, 4%));
-  filter: none;
-}
-
-.btn-shadow-inverse(@color) {
-  #gradient > .vertical-three-colors(darken(@color, 24%), darken(@color, 18%), 40%, darken(@color, 16%));
-  filter: none;
-}
-
-// Navbar =====================================================================
-
-.navbar {
-
-  .btn-shadow(@navbar-default-bg);
-  border: 1px solid rgba(0, 0, 0, 0.6);
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-
-  .navbar-nav > li > a {
-    border-right: 1px solid rgba(0, 0, 0, 0.2);
-    border-left: 1px solid rgba(255, 255, 255, 0.1);
-
-    &:hover {
-      .btn-shadow-inverse(@navbar-default-bg);
-      border-left-color: transparent;
-    }
-  }
-
-  &-inverse {
-    .btn-shadow(@navbar-inverse-bg);
-
-    .badge {
-      background-color: @navbar-inverse-link-active-bg;
-    }
-
-    .navbar-nav > li > a {
-
-      &:hover {
-        .btn-shadow-inverse(@navbar-inverse-bg);
-      }
-    }
-  }
-
-  .nav .open > a {
-    border-color: transparent;
-  }
-
-  &-nav > li.active > a {
-    border-left-color: transparent;
-  }
-
-  &-form {
-    margin-left: 5px;
-    margin-right: 5px;
-  }
-}
-
-// Buttons ====================================================================
-
-.btn,
-.btn:hover {
-  border-color: rgba(0, 0, 0, 0.6);
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-}
-
-.btn-default {
-  .btn-shadow(@btn-default-bg);
-
-  &:hover {
-    .btn-shadow-inverse(@btn-default-bg);
-  }
-}
-
-.btn-primary {
-  .btn-shadow(@btn-primary-bg);
-
-  &:hover {
-    .btn-shadow-inverse(@btn-primary-bg);
-  }
-}
-
-.btn-success {
-  .btn-shadow(@btn-success-bg);
-
-  &:hover {
-    .btn-shadow-inverse(@btn-success-bg);
-  }
-}
-
-.btn-info {
-  .btn-shadow(@btn-info-bg);
-
-  &:hover {
-    .btn-shadow-inverse(@btn-info-bg);
-  }
-}
-
-.btn-warning {
-  .btn-shadow(@btn-warning-bg);
-
-  &:hover {
-    .btn-shadow-inverse(@btn-warning-bg);
-  }
-}
-
-.btn-danger {
-  .btn-shadow(@btn-danger-bg);
-
-  &:hover {
-    .btn-shadow-inverse(@btn-danger-bg);
-  }
-}
-
-.btn-link,
-.btn-link:hover {
-  border-color: transparent;
-}
-
-// Typography =================================================================
-
-h1, h2, h3, h4, h5, h6 {
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3);
-}
-
-.text-primary,
-.text-primary:hover {
-  color: @brand-primary;
-}
-
-.text-success,
-.text-success:hover {
-  color: @brand-success;
-}
-
-.text-danger,
-.text-danger:hover {
-  color: @brand-danger;
-}
-
-.text-warning,
-.text-warning:hover {
-  color: @brand-warning;
-}
-
-.text-info,
-.text-info:hover {
-  color: @brand-info;
-}
-
-// Tables =====================================================================
-
-.table {
-
-  .success,
-  .warning,
-  .danger,
-  .info {
-    color: #fff;
-  }
-
-  &-bordered tbody {
-
-    tr.success,
-    tr.warning,
-    tr.danger {
-
-      td,
-      &:hover td {
-        border-color: @table-border-color;
-      }
-    }
-  }
-}
-
-.table-responsive > .table {
-  background-color: @table-bg;
-}
-
-// Forms ======================================================================
-
-input,
-textarea {
-  color: @input-color;
-}
-
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-warning;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-warning;
-  }
-
-  .input-group-addon {
-    background-color: @body-bg;
-    border: none;
-  }
-}
-
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-danger;
-  }
-
-  .input-group-addon {
-    background-color: @body-bg;
-    border: none;
-  }
-}
-
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border-color: @brand-success;
-  }
-
-  .input-group-addon {
-    background-color: @body-bg;
-    border: none;
-  }
-}
-
-legend {
-  color: #fff;
-}
-
-.input-group-addon {
-  border-color: rgba(0, 0, 0, 0.6);
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-  .btn-shadow(@btn-default-bg);
-  color: @btn-default-color;
-}
-
-// Navs =======================================================================
-
-.nav {
-
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: rgba(0, 0, 0, 0.6);
-  }
-
-}
-
-.nav-pills {
-
-  & > li > a {
-    .btn-shadow(@btn-default-bg);
-    border: 1px solid rgba(0, 0, 0, 0.6);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-
-    &:hover {
-      .btn-shadow-inverse(@btn-default-bg);
-      border: 1px solid rgba(0, 0, 0, 0.6);
-    }
-  }
-
-  & > li.active > a,
-  & > li.active > a:hover {
-    background-color: none;
-    .btn-shadow-inverse(@btn-default-bg);
-    border: 1px solid rgba(0, 0, 0, 0.6);
-  }
-
-  & > li.disabled > a,
-  & > li.disabled > a:hover {
-    .btn-shadow(@btn-default-bg);
-  }
-}
-
-.pagination {
-
-  & > li > a,
-  & > li > span {
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-    .btn-shadow(@btn-default-bg);
-
-    &:hover {
-      .btn-shadow-inverse(@btn-default-bg);
-    }
-  }
-
-  & > li.active > a,
-  & > li.active > span {
-    .btn-shadow-inverse(@btn-default-bg);
-  }
-
-  & > li.disabled > a,
-  & > li.disabled > a:hover,
-  & > li.disabled > span,
-  & > li.disabled > span:hover {
-    background-color: transparent;
-    .btn-shadow(@btn-default-bg);
-  }
-}
-
-.pager {
-
-  & > li > a {
-    .btn-shadow(@btn-default-bg);
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-
-    &:hover {
-      .btn-shadow-inverse(@btn-default-bg);
-    }
-  }
-
-  & > li.disabled > a,
-  & > li.disabled > a:hover {
-    background-color: transparent;
-    .btn-shadow(@btn-default-bg);
-  }
-}
-
-.breadcrumb {
-  border: 1px solid rgba(0, 0, 0, 0.6);
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
-  .btn-shadow(@btn-default-bg);
-}
-
-// Indicators =================================================================
-
-.alert {
-
-  .alert-link,
-  a {
-    color: #fff;
-    text-decoration: underline;
-  }
-
-  .close {
-    color: @close-color;
-    text-decoration: none;
-  }
-}
-
-// Progress bars ==============================================================
-
-// Containers =================================================================
-
-a.thumbnail:hover,
-a.thumbnail:focus,
-a.thumbnail.active {
-  border-color: @thumbnail-border;
-}
-
-a.list-group-item {
-
-  &.active,
-  &.active:hover,
-  &.active:focus {
-    border-color: @list-group-border;
-  }
-
-  &-success {
-    &.active {
-      background-color: @state-success-bg;
-    }
-
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-success-bg, 5%);
-    }
-  }
-
-  &-warning {
-    &.active {
-      background-color: @state-warning-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-warning-bg, 5%);
-    }
-  }
-
-  &-danger {
-    &.active {
-      background-color: @state-danger-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-danger-bg, 5%);
-    }
-  }
-}
-
-.jumbotron {
-  border: 1px solid rgba(0, 0, 0, 0.6);
-}
-
-.panel-primary,
-.panel-success,
-.panel-danger,
-.panel-warning,
-.panel-info {
-
-  .panel-heading {
-    border-color: #000;
-  }
-}
+b'// Slate 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n.btn-shadow(@color) {\n  #gradient > .vertical-three-colors(lighten(@color, 6%), @color, 60%, darken(@color, 4%));\n  filter: none;\n}\n\n.btn-shadow-inverse(@color) {\n  #gradient > .vertical-three-colors(darken(@color, 24%), darken(@color, 18%), 40%, darken(@color, 16%));\n  filter: none;\n}\n\n// Navbar =====================================================================\n\n.navbar {\n  &-default,\n  &-inverse {\n    border: 1px solid rgba(0, 0, 0, 0.6);\n    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);\n\n    @media (min-width: @grid-float-breakpoint) {\n      .navbar-nav > li > a {\n        border-right: 1px solid rgba(0, 0, 0, 0.2);\n        border-left: 1px solid rgba(255, 255, 255, 0.1);\n\n        &:hover {\n          border-left-color: transparent;\n        }\n      }\n\n      .nav .open > a {\n        border-color: transparent;\n      }\n\n      .navbar-nav > li.active > a {\n        border-left-color: transparent;\n      }\n\n      .navbar-form {\n        margin-left: 5px;\n        margin-right: 5px;\n      }\n    }\n  }\n\n  &-default {\n    .btn-shadow(@navbar-default-bg);\n\n    .navbar-nav > li > a {\n      &:hover {\n        .btn-shadow-inverse(@navbar-default-bg);\n      }\n    }\n  }\n\n  &-inverse {\n    .btn-shadow(@navbar-inverse-bg);\n\n    .badge {\n      background-color: @navbar-inverse-link-active-bg;\n    }\n\n    .navbar-nav > li > a {\n\n      &:hover {\n        .btn-shadow-inverse(@navbar-inverse-bg);\n      }\n    }\n  }\n}\n\n// Buttons ====================================================================\n\n.btn,\n.btn:hover {\n  border-color: rgba(0, 0, 0, 0.6);\n  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);\n}\n\n.btn-default {\n  .btn-shadow(@btn-default-bg);\n\n  &:hover {\n    .btn-shadow-inverse(@btn-default-bg);\n  }\n}\n\n.btn-primary {\n  .btn-shadow(@btn-primary-bg);\n\n  &:hover {\n    .btn-shadow-inverse(@btn-primary-bg);\n  }\n}\n\n.btn-success {\n  .btn-shadow(@btn-success-bg);\n\n  &:hover {\n    .btn-shadow-inverse(@btn-success-bg);\n  }\n}\n\n.btn-info {\n  .btn-shadow(@btn-info-bg);\n\n  &:hover {\n    .btn-shadow-inverse(@btn-info-bg);\n  }\n}\n\n.btn-warning {\n  .btn-shadow(@btn-warning-bg);\n\n  &:hover {\n    .btn-shadow-inverse(@btn-warning-bg);\n  }\n}\n\n.btn-danger {\n  .btn-shadow(@btn-danger-bg);\n\n  &:hover {\n    .btn-shadow-inverse(@btn-danger-bg);\n  }\n}\n\n.btn-link,\n.btn-link:hover {\n  border-color: transparent;\n}\n\n// Typography =================================================================\n\nh1, h2, h3, h4, h5, h6 {\n  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.3);\n}\n\n.text-primary,\n.text-primary:hover {\n  color: @brand-primary;\n}\n\n.text-success,\n.text-success:hover {\n  color: @brand-success;\n}\n\n.text-danger,\n.text-danger:hover {\n  color: @brand-danger;\n}\n\n.text-warning,\n.text-warning:hover {\n  color: @brand-warning;\n}\n\n.text-info,\n.text-info:hover {\n  color: @brand-info;\n}\n\n// Tables =====================================================================\n\n.table {\n\n  .success,\n  .warning,\n  .danger,\n  .info {\n    color: #fff;\n  }\n\n  &-bordered tbody {\n\n    tr.success,\n    tr.warning,\n    tr.danger {\n\n      td,\n      &:hover td {\n        border-color: @table-border-color;\n      }\n    }\n  }\n}\n\n.table-responsive > .table {\n  background-color: @table-bg;\n}\n\n// Forms ======================================================================\n\ninput,\ntextarea {\n  color: @input-color;\n}\n\n.has-warning {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-warning;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-warning;\n  }\n\n  .input-group-addon {\n    border-color: @input-group-addon-border-color;\n  }\n}\n\n.has-error {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-danger;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-danger;\n  }\n\n  .input-group-addon {\n    border-color: @input-group-addon-border-color;\n  }\n}\n\n.has-success {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-success;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border-color: @brand-success;\n  }\n\n  .input-group-addon {\n    border-color: @input-group-addon-border-color;\n  }\n}\n\nlegend {\n  color: #fff;\n}\n\n.input-group-addon {\n  .btn-shadow(@btn-default-bg);\n  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);\n  color: @btn-default-color;\n}\n\n// Navs =======================================================================\n\n.nav {\n\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    border-color: rgba(0, 0, 0, 0.6);\n  }\n\n}\n\n.nav-pills {\n\n  & > li > a {\n    .btn-shadow(@btn-default-bg);\n    border: 1px solid rgba(0, 0, 0, 0.6);\n    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);\n\n    &:hover {\n      .btn-shadow-inverse(@btn-default-bg);\n      border: 1px solid rgba(0, 0, 0, 0.6);\n    }\n  }\n\n  & > li.active > a,\n  & > li.active > a:hover {\n    background-color: none;\n    .btn-shadow-inverse(@btn-default-bg);\n    border: 1px solid rgba(0, 0, 0, 0.6);\n  }\n\n  & > li.disabled > a,\n  & > li.disabled > a:hover {\n    .btn-shadow(@btn-default-bg);\n  }\n}\n\n.pagination {\n\n  & > li > a,\n  & > li > span {\n    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);\n    .btn-shadow(@btn-default-bg);\n\n    &:hover {\n      .btn-shadow-inverse(@btn-default-bg);\n    }\n  }\n\n  & > li.active > a,\n  & > li.active > span {\n    .btn-shadow-inverse(@btn-default-bg);\n  }\n\n  & > li.disabled > a,\n  & > li.disabled > a:hover,\n  & > li.disabled > span,\n  & > li.disabled > span:hover {\n    background-color: transparent;\n    .btn-shadow(@btn-default-bg);\n  }\n}\n\n.pager {\n\n  & > li > a {\n    .btn-shadow(@btn-default-bg);\n    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);\n\n    &:hover {\n      .btn-shadow-inverse(@btn-default-bg);\n    }\n  }\n\n  & > li.disabled > a,\n  & > li.disabled > a:hover {\n    background-color: transparent;\n    .btn-shadow(@btn-default-bg);\n  }\n}\n\n.breadcrumb {\n  border: 1px solid rgba(0, 0, 0, 0.6);\n  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);\n  .btn-shadow(@btn-default-bg);\n}\n\n// Indicators =================================================================\n\n.alert {\n\n  .alert-link,\n  a {\n    color: #fff;\n    text-decoration: underline;\n  }\n\n  .close {\n    color: @close-color;\n    text-decoration: none;\n  }\n}\n\n// Progress bars ==============================================================\n\n// Containers =================================================================\n\na.thumbnail:hover,\na.thumbnail:focus,\na.thumbnail.active {\n  border-color: @thumbnail-border;\n}\n\na.list-group-item {\n\n  &.active,\n  &.active:hover,\n  &.active:focus {\n    border-color: @list-group-border;\n  }\n\n  &-success {\n    &.active {\n      background-color: @state-success-bg;\n    }\n\n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-success-bg, 5%);\n    }\n  }\n\n  &-warning {\n    &.active {\n      background-color: @state-warning-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-warning-bg, 5%);\n    }\n  }\n\n  &-danger {\n    &.active {\n      background-color: @state-danger-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-danger-bg, 5%);\n    }\n  }\n}\n\n.jumbotron {\n  border: 1px solid rgba(0, 0, 0, 0.6);\n}\n\n.panel-primary,\n.panel-success,\n.panel-danger,\n.panel-warning,\n.panel-info {\n\n  .panel-heading {\n    border-color: #000;\n  }\n}'
