--- a/bootstrap_themes/static/bootstrap/themes/superhero/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/superhero/less/bootswatch.less
@@ -1,364 +1,1 @@
-// Superhero 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Lato:300,400,700";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-// Navbar =====================================================================
-
-.navbar {
-  .box-shadow(none);
-  border: none;
-  font-size: @font-size-small;
-
-  &-default {
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-default-bg;
-    }
-  }
-
-  &-inverse {
-
-    .badge {
-      background-color: #fff;
-      color: @navbar-inverse-bg;
-    }
-  }
-}
-
-// Buttons ====================================================================
-
-.btn {
-
-  &-default {
-    &:hover {
-      background-color: darken(@btn-default-bg, 3%);
-    }
-  }
-
-  &-sm,
-  &-xs {
-    font-size: @font-size-small;
-  }
-}
-
-// Typography =================================================================
-
-.text-primary,
-.text-primary:hover {
-  color: @brand-primary;
-}
-
-.text-success,
-.text-success:hover {
-  color: @brand-success;
-}
-
-.text-danger,
-.text-danger:hover {
-  color: @brand-danger;
-}
-
-.text-warning,
-.text-warning:hover {
-  color: @brand-warning;
-}
-
-.text-info,
-.text-info:hover {
-  color: @brand-info;
-}
-
-.page-header {
-  border-bottom-color: @table-border-color;
-}
-
-.dropdown-menu {
-
-  border: none;
-  margin: 0;
-  .box-shadow(none);
-
-  > li > a {
-    font-size: @font-size-small;
-  }
-}
-
-.btn-group.open .dropdown-toggle {
-  .box-shadow(none);
-}
-
-.dropdown-header {
-  font-size: @font-size-small;
-}
-
-// Tables =====================================================================
-
-table,
-.table {
-  font-size: @font-size-small;
-
-  a:not(.btn) {
-    color: #fff;
-    text-decoration: underline;
-  }
-
-  .dropdown-menu a {
-    text-decoration: none;
-  }
-
-  .text-muted {
-    color: @text-muted;
-  }
-
-  > thead > tr > th,
-  > tbody > tr > th,
-  > tfoot > tr > th,
-  > thead > tr > td,
-  > tbody > tr > td,
-  > tfoot > tr > td {
-    border-color: transparent;
-  }
- }
-
-// Forms ======================================================================
-
-input,
-textarea {
-  color: @input-color;
-}
-
-label,
-.radio label,
-.checkbox label,
-.help-block {
-  font-size: @font-size-small;
-}
-
-.input-addon,
-.input-group-addon {
-  color: @text-color;
-}
-
-.has-warning {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-warning;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 4px solid @brand-warning;
-  }
-
-  .input-group-addon {
-    border: none;
-  }
-}
-
-.has-error {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-danger;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 4px solid @brand-danger;
-  }
-
-  .input-group-addon {
-    border: none;
-  }
-}
-
-.has-success {
-  .help-block,
-  .control-label,
-  .radio,
-  .checkbox,
-  .radio-inline,
-  .checkbox-inline,
-  &.radio label,
-  &.checkbox label,
-  &.radio-inline label,
-  &.checkbox-inline label,
-  .form-control-feedback {
-    color: @brand-success;
-  }
-
-  .form-control,
-  .form-control:focus {
-    border: 4px solid @brand-success;
-  }
-
-  .input-group-addon {
-    border: none;
-  }
-}
-
-.form-control:focus {
-  .box-shadow(none);
-}
-
-.has-warning,
-.has-error,
-.has-success {
-  .form-control:focus {
-    .box-shadow(none);
-  }
-}
-
-// Navs =======================================================================
-
-.nav {
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: transparent;
-  }
-}
-
-.nav-tabs {
-  > li > a {
-    color: @text-color;
-  }
-}
-
-.nav-pills {
-  > li > a {
-    color: @text-color;
-  }
-}
-
-.pager {
-  a {
-    color: @text-color;
-  }
-}
-
-// Indicators =================================================================
-
-.alert {
-  color: #fff;
-
-  a,
-  .alert-link {
-    color: #fff;
-  }
-}
-
-.close {
-  opacity: 0.4;
-
-  &:hover,
-  &:focus {
-    opacity: 1;
-  }
-}
-
-// Progress bars ==============================================================
-
-// Containers =================================================================
-
-.well {
-  .box-shadow(none);
-}
-
-a.list-group-item {
-
-  &.active,
-  &.active:hover,
-  &.active:focus {
-    border: none;
-  }
-
-  &-success {
-    &.active {
-      background-color: @state-success-bg;
-    }
-
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-success-bg, 5%);
-    }
-  }
-
-  &-warning {
-    &.active {
-      background-color: @state-warning-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-warning-bg, 5%);
-    }
-  }
-
-  &-danger {
-    &.active {
-      background-color: @state-danger-bg;
-    }
-    
-    &.active:hover,
-    &.active:focus {
-      background-color: darken(@state-danger-bg, 5%);
-    }
-  }
-}
-
-.panel {
-  border: none;
-
-  &-default > .panel-heading {
-    background-color: @table-bg-hover;
-    color: @text-color;
-  }
-}
-
-.thumbnail {
-  background-color: @well-bg;
-  border: none;
-}
-
-.modal {
-  padding: 0;
-
-  &-header,
-  &-footer {
-    background-color: @table-bg-hover;
-    border: none;
-    border-radius: 0;
-  }
-}
-
-.popover {
-  &-title {
-    border: none;
-  }
-}
+b'// Superhero 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Lato:300,400,700";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n// Navbar =====================================================================\n\n.navbar {\n  .box-shadow(none);\n  border: none;\n  font-size: @font-size-small;\n\n  &-default {\n\n    .badge {\n      background-color: #fff;\n      color: @navbar-default-bg;\n    }\n  }\n\n  &-inverse {\n\n    .badge {\n      background-color: #fff;\n      color: @navbar-inverse-bg;\n    }\n  }\n}\n\n// Buttons ====================================================================\n\n.btn {\n\n  &-default {\n    &:hover {\n      background-color: darken(@btn-default-bg, 3%);\n    }\n  }\n\n  &-sm,\n  &-xs {\n    font-size: @font-size-small;\n  }\n}\n\n// Typography =================================================================\n\n.text-primary,\n.text-primary:hover {\n  color: @brand-primary;\n}\n\n.text-success,\n.text-success:hover {\n  color: @brand-success;\n}\n\n.text-danger,\n.text-danger:hover {\n  color: @brand-danger;\n}\n\n.text-warning,\n.text-warning:hover {\n  color: @brand-warning;\n}\n\n.text-info,\n.text-info:hover {\n  color: @brand-info;\n}\n\n.page-header {\n  border-bottom-color: @table-border-color;\n}\n\n.dropdown-menu {\n\n  border: none;\n  margin: 0;\n  .box-shadow(none);\n\n  > li > a {\n    font-size: @font-size-small;\n  }\n}\n\n.btn-group.open .dropdown-toggle {\n  .box-shadow(none);\n}\n\n.dropdown-header {\n  font-size: @font-size-small;\n}\n\n// Tables =====================================================================\n\ntable,\n.table {\n  font-size: @font-size-small;\n\n  a:not(.btn) {\n    color: #fff;\n    text-decoration: underline;\n  }\n\n  .dropdown-menu a {\n    text-decoration: none;\n  }\n\n  .text-muted {\n    color: @text-muted;\n  }\n\n  > thead > tr > th,\n  > tbody > tr > th,\n  > tfoot > tr > th,\n  > thead > tr > td,\n  > tbody > tr > td,\n  > tfoot > tr > td {\n    border-color: transparent;\n  }\n }\n\n// Forms ======================================================================\n\ninput,\ntextarea {\n  color: @input-color;\n}\n\nlabel,\n.radio label,\n.checkbox label,\n.help-block {\n  font-size: @font-size-small;\n}\n\n.input-addon,\n.input-group-addon {\n  color: @text-color;\n}\n\n.has-warning {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-warning;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 4px solid @brand-warning;\n  }\n\n  .input-group-addon {\n    border: none;\n  }\n}\n\n.has-error {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-danger;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 4px solid @brand-danger;\n  }\n\n  .input-group-addon {\n    border: none;\n  }\n}\n\n.has-success {\n  .help-block,\n  .control-label,\n  .radio,\n  .checkbox,\n  .radio-inline,\n  .checkbox-inline,\n  &.radio label,\n  &.checkbox label,\n  &.radio-inline label,\n  &.checkbox-inline label,\n  .form-control-feedback {\n    color: @brand-success;\n  }\n\n  .form-control,\n  .form-control:focus {\n    border: 4px solid @brand-success;\n  }\n\n  .input-group-addon {\n    border: none;\n  }\n}\n\n.form-control:focus {\n  .box-shadow(none);\n}\n\n.has-warning,\n.has-error,\n.has-success {\n  .form-control:focus {\n    .box-shadow(none);\n  }\n}\n\n// Navs =======================================================================\n\n.nav {\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    border-color: transparent;\n  }\n}\n\n.nav-tabs {\n  > li > a {\n    color: @text-color;\n  }\n}\n\n.nav-pills {\n  > li > a {\n    color: @text-color;\n  }\n}\n\n.pager {\n  a {\n    color: @text-color;\n  }\n}\n\n// Indicators =================================================================\n\n.alert {\n  color: #fff;\n\n  a,\n  .alert-link {\n    color: #fff;\n  }\n}\n\n.close {\n  opacity: 0.4;\n\n  &:hover,\n  &:focus {\n    opacity: 1;\n  }\n}\n\n// Progress bars ==============================================================\n\n// Containers =================================================================\n\n.well {\n  .box-shadow(none);\n}\n\na.list-group-item {\n\n  &.active,\n  &.active:hover,\n  &.active:focus {\n    border: none;\n  }\n\n  &-success {\n    &.active {\n      background-color: @state-success-bg;\n    }\n\n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-success-bg, 5%);\n    }\n  }\n\n  &-warning {\n    &.active {\n      background-color: @state-warning-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-warning-bg, 5%);\n    }\n  }\n\n  &-danger {\n    &.active {\n      background-color: @state-danger-bg;\n    }\n    \n    &.active:hover,\n    &.active:focus {\n      background-color: darken(@state-danger-bg, 5%);\n    }\n  }\n}\n\n.panel {\n  border: none;\n\n  &-default > .panel-heading {\n    background-color: @table-bg-hover;\n    color: @text-color;\n  }\n}\n\n.thumbnail {\n  background-color: @well-bg;\n  border: none;\n}\n\n.modal {\n  padding: 0;\n\n  &-header,\n  &-footer {\n    background-color: @table-bg-hover;\n    border: none;\n    border-radius: 0;\n  }\n}\n\n.popover {\n  &-title {\n    border: none;\n  }\n}\n'
