--- a/bootstrap_themes/static/bootstrap/themes/yeti/less/bootswatch.less
+++ b/bootstrap_themes/static/bootstrap/themes/yeti/less/bootswatch.less
@@ -1,449 +1,1 @@
-// Yeti 3.3.5
-// Bootswatch
-// -----------------------------------------------------
-
-@web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700";
-
-.web-font(@path) {
-  @import url("@{path}");
-}
-.web-font(@web-font-path);
-
-// Navbar =====================================================================
-
-.navbar {
-  border: none;
-  font-size: 13px;
-  font-weight: 300;
-
-  .navbar-toggle:hover .icon-bar {
-    background-color: #b3b3b3;
-  }
-
-  &-collapse {
-    border-top-color: @dropdown-divider-bg;
-    .box-shadow(none);
-  }
-
-  .btn {
-    padding-top: 6px;
-    padding-bottom: 6px;
-  }
-
-  &-form {
-    margin-top: 7px;
-    margin-bottom: 5px;
-
-    .form-control {
-      height: auto;
-      padding: @padding-xs-vertical @padding-xs-horizontal;
-    }
-  }
-
-  &-text {
-    margin: 12px 15px;
-    line-height: 21px;
-  }
-
-  .dropdown {
-
-    &-menu {
-      border: none;
-
-      > li > a,
-      > li > a:focus {
-        background-color: transparent;
-        font-size: 13px;
-        font-weight: 300;
-      }
-    }
-
-    &-header {
-      color: rgba(255, 255, 255, 0.5);
-    }
-
-  }
-
-  &-default {
-
-    .dropdown-menu {
-      background-color: @navbar-default-bg;
-
-      > li > a,
-      > li > a:focus {
-        color: @navbar-default-color;
-      }
-
-      > li > a:hover,
-      > .active > a,
-      > .active > a:hover {
-        background-color: @navbar-default-link-hover-bg;
-      }
-    }
-  }
-
-  &-inverse {
-
-    .dropdown-menu {
-      background-color: @navbar-inverse-bg;
-
-      > li > a,
-      > li > a:focus {
-        color: @navbar-inverse-color;
-      }
-
-      > li > a:hover,
-      > .active > a,
-      > .active > a:hover {
-        background-color: @navbar-inverse-link-hover-bg;
-      }
-    }
-  }
-}
-
-// Buttons ====================================================================
-
-.btn {
-  padding: @padding-base-vertical @padding-base-horizontal;
-
-  &-lg {
-    padding: @padding-large-vertical @padding-large-horizontal;
-  }
-
-  &-sm {
-    padding: @padding-small-vertical @padding-small-horizontal;
-  }
-
-  &-xs {
-    padding: @padding-xs-vertical @padding-xs-horizontal;
-  }
-}
-
-.btn-group {
-
-  .btn ~ .dropdown-toggle {
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
-  .dropdown-menu {
-    border-top-width: 0;
-  }
-
-  &.dropup .dropdown-menu {
-    border-top-width: 1px;
-    border-bottom-width: 0;
-    margin-bottom: 0;
-  }
-
-  .dropdown-toggle {
-
-    &.btn-default ~ .dropdown-menu {
-      background-color: @btn-default-bg;
-      border-color: @btn-default-border;
-
-      > li > a {
-        color: @btn-default-color;
-      }
-
-      > li > a:hover {
-        background-color: darken(@btn-default-bg, 8%);
-      }
-    }
-
-    &.btn-primary ~ .dropdown-menu {
-      background-color: @btn-primary-bg;
-      border-color: @btn-primary-border;
-
-      > li > a {
-        color: @btn-primary-color;
-      }
-
-      > li > a:hover {
-        background-color: darken(@btn-primary-bg, 8%);
-      }
-    }
-
-    &.btn-success ~ .dropdown-menu {
-      background-color: @btn-success-bg;
-      border-color: @btn-success-border;
-
-      > li > a {
-        color: @btn-success-color;
-      }
-
-      > li > a:hover {
-        background-color: darken(@btn-success-bg, 8%);
-      }
-    }
-
-    &.btn-info ~ .dropdown-menu {
-      background-color: @btn-info-bg;
-      border-color: @btn-info-border;
-
-      > li > a {
-        color: @btn-info-color;
-      }
-
-      > li > a:hover {
-        background-color: darken(@btn-info-bg, 8%);
-      }
-    }
-
-    &.btn-warning ~ .dropdown-menu {
-      background-color: @btn-warning-bg;
-      border-color: @btn-warning-border;
-
-      > li > a {
-        color: @btn-warning-color;
-      }
-
-      > li > a:hover {
-        background-color: darken(@btn-warning-bg, 8%);
-      }
-    }
-
-    &.btn-danger ~ .dropdown-menu {
-      background-color: @btn-danger-bg;
-      border-color: @btn-danger-border;
-
-      > li > a {
-        color: @btn-danger-color;
-      }
-
-      > li > a:hover {
-        background-color: darken(@btn-danger-bg, 8%);
-      }
-    }
-  }
-}
-
-// Typography =================================================================
-
-.lead {
-  color: @gray;
-}
-
-cite {
-  font-style: italic;
-}
-
-blockquote {
-  border-left-width: 1px;
-  color: @gray;
-
-  &.pull-right {
-    border-right-width: 1px;
-  }
-
-  small {
-    font-size: @font-size-small;
-    font-weight: 300;
-  }
-}
-
-// Tables =====================================================================
-
-table {
-  font-size: @font-size-small;
-}
-
-// Forms ======================================================================
-
-label,
-.control-label,
-.help-block,
-.checkbox,
-.radio {
-  font-size: @font-size-small;
-  font-weight: normal;
-}
-
-input[type="radio"],
-input[type="checkbox"] {
-  margin-top: 1px;
-}
-
-// Navs =======================================================================
-
-.nav {
-  .open > a,
-  .open > a:hover,
-  .open > a:focus {
-    border-color: transparent;
-  }
-}
-
-.nav-tabs {
-  > li > a {
-    background-color: @btn-default-bg;
-    color: @text-color;
-  }
-
-  .caret {
-    border-top-color: @text-color;
-    border-bottom-color: @text-color;
-  }
-}
-
-.nav-pills {
-  font-weight: 300;
-}
-
-.breadcrumb {
-  border: 1px solid @table-border-color;
-  border-radius: 3px;
-  font-size: 10px;
-  font-weight: 300;
-  text-transform: uppercase;
-}
-
-.pagination {
-  font-size: @font-size-small;
-  font-weight: 300;
-  color: @gray-light;
-
-  > li {
-    > a,
-    > span {
-      margin-left: 4px;
-      color: @gray-light;
-    }
-  }
-
-  > .active {
-    > a,
-    > span {
-      color: #fff;
-    }
-  }
-
-  > li,
-  > li:first-child,
-  > li:last-child {
-    > a,
-    > span {
-      border-radius: 3px;
-    }
-  }
-
-  &-lg > li > a,
-  &-lg > li > span {
-    padding-left: 22px;
-    padding-right: 22px;
-  }
-
-  &-sm > li > a,
-  &-sm > li > span {
-    padding: 0 5px;
-  }
-}
-
-.pager {
-  font-size: @font-size-small;
-  font-weight: 300;
-  color: @gray-light;
-}
-
-.list-group {
-  font-size: @font-size-small;
-  font-weight: 300;
-}
-
-// Indicators =================================================================
-
-.close {
-  opacity: 0.4;
-  text-decoration: none;
-  text-shadow: none;
-
-  &:hover,
-  &:focus {
-    opacity: 1;
-  }
-}
-
-.alert {
-  font-size: @font-size-small;
-  font-weight: 300;
-
-  .alert-link {
-    font-weight: normal;
-    color: #fff;
-    text-decoration: underline;
-  }
-}
-
-.label {
-  padding-left: 1em;
-  padding-right: 1em;
-  border-radius: 0;
-  font-weight: 300;
-
-  &-default {
-    background-color: @btn-default-bg;
-    color: @btn-default-color;
-  }
-}
-
-.badge {
-  font-weight: 300;
-}
-
-// Progress bars ==============================================================
-
-.progress {
-  height: 22px;
-  padding: 2px;
-  background-color: #f6f6f6;
-  border: 1px solid #ccc;
-  .box-shadow(none);
-}
-
-// Containers =================================================================
-
-.dropdown {
-
-  &-menu {
-    padding: 0;
-    margin-top: 0;
-    font-size: @font-size-small;
-
-    > li > a {
-      padding: 12px 15px;
-    }
-  }
-
-  &-header {
-    padding-left: 15px;
-    padding-right: 15px;
-    font-size: 9px;
-    text-transform: uppercase;
-  }
-}
-
-.popover {
-  color: #fff;
-  font-size: 12px;
-  font-weight: 300;
-}
-
-.panel {
-  &-heading,
-  &-footer {
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
-  }
-
-  &-default {
-    .close {
-      color: @text-color;
-    }
-  }
-}
-
-.modal {
-  .close {
-    color: @text-color;
-  }
-}
+b'// Yeti 3.3.7\n// Bootswatch\n// -----------------------------------------------------\n\n@web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700";\n\n.web-font(@path) {\n  @import url("@{path}");\n}\n.web-font(@web-font-path);\n\n// Navbar =====================================================================\n\n.navbar {\n  border: none;\n  font-size: 13px;\n  font-weight: 300;\n\n  .navbar-toggle:hover .icon-bar {\n    background-color: #b3b3b3;\n  }\n\n  &-collapse {\n    border-top-color: @dropdown-divider-bg;\n    .box-shadow(none);\n  }\n\n  .btn {\n    padding-top: 6px;\n    padding-bottom: 6px;\n  }\n\n  &-form {\n    margin-top: 7px;\n    margin-bottom: 5px;\n\n    .form-control {\n      height: auto;\n      padding: @padding-xs-vertical @padding-xs-horizontal;\n    }\n  }\n\n  &-text {\n    margin: 12px 15px;\n    line-height: 21px;\n  }\n\n  .dropdown {\n\n    &-menu {\n      border: none;\n\n      > li > a,\n      > li > a:focus {\n        background-color: transparent;\n        font-size: 13px;\n        font-weight: 300;\n      }\n    }\n\n    &-header {\n      color: rgba(255, 255, 255, 0.5);\n    }\n\n  }\n\n  &-default {\n\n    .dropdown-menu {\n      background-color: @navbar-default-bg;\n\n      > li > a,\n      > li > a:focus {\n        color: @navbar-default-color;\n      }\n\n      > li > a:hover,\n      > .active > a,\n      > .active > a:hover {\n        background-color: @navbar-default-link-hover-bg;\n      }\n    }\n  }\n\n  &-inverse {\n\n    .dropdown-menu {\n      background-color: @navbar-inverse-bg;\n\n      > li > a,\n      > li > a:focus {\n        color: @navbar-inverse-color;\n      }\n\n      > li > a:hover,\n      > .active > a,\n      > .active > a:hover {\n        background-color: @navbar-inverse-link-hover-bg;\n      }\n    }\n  }\n}\n\n// Buttons ====================================================================\n\n.btn {\n  padding: @padding-base-vertical @padding-base-horizontal;\n\n  &-lg {\n    padding: @padding-large-vertical @padding-large-horizontal;\n  }\n\n  &-sm {\n    padding: @padding-small-vertical @padding-small-horizontal;\n  }\n\n  &-xs {\n    padding: @padding-xs-vertical @padding-xs-horizontal;\n  }\n}\n\n.btn-group {\n\n  .btn ~ .dropdown-toggle {\n    padding-left: 16px;\n    padding-right: 16px;\n  }\n\n  .dropdown-menu {\n    border-top-width: 0;\n  }\n\n  &.dropup .dropdown-menu {\n    border-top-width: 1px;\n    border-bottom-width: 0;\n    margin-bottom: 0;\n  }\n\n  .dropdown-toggle {\n\n    &.btn-default ~ .dropdown-menu {\n      background-color: @btn-default-bg;\n      border-color: @btn-default-border;\n\n      > li > a {\n        color: @btn-default-color;\n      }\n\n      > li > a:hover {\n        background-color: darken(@btn-default-bg, 8%);\n      }\n    }\n\n    &.btn-primary ~ .dropdown-menu {\n      background-color: @btn-primary-bg;\n      border-color: @btn-primary-border;\n\n      > li > a {\n        color: @btn-primary-color;\n      }\n\n      > li > a:hover {\n        background-color: darken(@btn-primary-bg, 8%);\n      }\n    }\n\n    &.btn-success ~ .dropdown-menu {\n      background-color: @btn-success-bg;\n      border-color: @btn-success-border;\n\n      > li > a {\n        color: @btn-success-color;\n      }\n\n      > li > a:hover {\n        background-color: darken(@btn-success-bg, 8%);\n      }\n    }\n\n    &.btn-info ~ .dropdown-menu {\n      background-color: @btn-info-bg;\n      border-color: @btn-info-border;\n\n      > li > a {\n        color: @btn-info-color;\n      }\n\n      > li > a:hover {\n        background-color: darken(@btn-info-bg, 8%);\n      }\n    }\n\n    &.btn-warning ~ .dropdown-menu {\n      background-color: @btn-warning-bg;\n      border-color: @btn-warning-border;\n\n      > li > a {\n        color: @btn-warning-color;\n      }\n\n      > li > a:hover {\n        background-color: darken(@btn-warning-bg, 8%);\n      }\n    }\n\n    &.btn-danger ~ .dropdown-menu {\n      background-color: @btn-danger-bg;\n      border-color: @btn-danger-border;\n\n      > li > a {\n        color: @btn-danger-color;\n      }\n\n      > li > a:hover {\n        background-color: darken(@btn-danger-bg, 8%);\n      }\n    }\n  }\n}\n\n// Typography =================================================================\n\n.lead {\n  color: @gray;\n}\n\ncite {\n  font-style: italic;\n}\n\nblockquote {\n  border-left-width: 1px;\n  color: @gray;\n\n  &.pull-right {\n    border-right-width: 1px;\n  }\n\n  small {\n    font-size: @font-size-small;\n    font-weight: 300;\n  }\n}\n\n// Tables =====================================================================\n\ntable {\n  font-size: @font-size-small;\n}\n\n// Forms ======================================================================\n\nlabel,\n.control-label,\n.help-block,\n.checkbox,\n.radio {\n  font-size: @font-size-small;\n  font-weight: normal;\n}\n\ninput[type="radio"],\ninput[type="checkbox"] {\n  margin-top: 1px;\n}\n\n// Navs =======================================================================\n\n.nav {\n  .open > a,\n  .open > a:hover,\n  .open > a:focus {\n    border-color: transparent;\n  }\n}\n\n.nav-tabs {\n  > li > a {\n    background-color: @btn-default-bg;\n    color: @text-color;\n  }\n\n  .caret {\n    border-top-color: @text-color;\n    border-bottom-color: @text-color;\n  }\n}\n\n.nav-pills {\n  font-weight: 300;\n}\n\n.breadcrumb {\n  border: 1px solid @table-border-color;\n  border-radius: 3px;\n  font-size: 10px;\n  font-weight: 300;\n  text-transform: uppercase;\n}\n\n.pagination {\n  font-size: @font-size-small;\n  font-weight: 300;\n  color: @gray-light;\n\n  > li {\n    > a,\n    > span {\n      margin-left: 4px;\n      color: @gray-light;\n    }\n  }\n\n  > .active {\n    > a,\n    > span {\n      color: #fff;\n    }\n  }\n\n  > li,\n  > li:first-child,\n  > li:last-child {\n    > a,\n    > span {\n      border-radius: 3px;\n    }\n  }\n\n  &-lg > li > a,\n  &-lg > li > span {\n    padding-left: 22px;\n    padding-right: 22px;\n  }\n\n  &-sm > li > a,\n  &-sm > li > span {\n    padding: 0 5px;\n  }\n}\n\n.pager {\n  font-size: @font-size-small;\n  font-weight: 300;\n  color: @gray-light;\n}\n\n.list-group {\n  font-size: @font-size-small;\n  font-weight: 300;\n}\n\n// Indicators =================================================================\n\n.close {\n  opacity: 0.4;\n  text-decoration: none;\n  text-shadow: none;\n\n  &:hover,\n  &:focus {\n    opacity: 1;\n  }\n}\n\n.alert {\n  font-size: @font-size-small;\n  font-weight: 300;\n\n  .alert-link {\n    font-weight: normal;\n    color: #fff;\n    text-decoration: underline;\n  }\n}\n\n.label {\n  padding-left: 1em;\n  padding-right: 1em;\n  border-radius: 0;\n  font-weight: 300;\n\n  &-default {\n    background-color: @btn-default-bg;\n    color: @btn-default-color;\n  }\n}\n\n.badge {\n  font-weight: 300;\n}\n\n// Progress bars ==============================================================\n\n.progress {\n  height: 22px;\n  padding: 2px;\n  background-color: #f6f6f6;\n  border: 1px solid #ccc;\n  .box-shadow(none);\n}\n\n// Containers =================================================================\n\n.dropdown {\n\n  &-menu {\n    padding: 0;\n    margin-top: 0;\n    font-size: @font-size-small;\n\n    > li > a {\n      padding: 12px 15px;\n    }\n  }\n\n  &-header {\n    padding-left: 15px;\n    padding-right: 15px;\n    font-size: 9px;\n    text-transform: uppercase;\n  }\n}\n\n.popover {\n  color: #fff;\n  font-size: 12px;\n  font-weight: 300;\n}\n\n.panel {\n  &-heading,\n  &-footer {\n    border-top-right-radius: 0;\n    border-top-left-radius: 0;\n  }\n\n  &-default {\n    .close {\n      color: @text-color;\n    }\n  }\n}\n\n.modal {\n  .close {\n    color: @text-color;\n  }\n}\n'
